--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+7-7 [OPEC+产油国未达协议 油价跌 – 法国国际广播电台 - RFI](/articles/rfi/1026684.md)
+
+7-7 [美股跌日圆升 日股开低 – 法国国际广播电台 - RFI](/articles/rfi/1026685.md)
+
 7-7 [阿维尼翁戏剧节下任总监专访：欧洲概念、契诃夫穿越时空的信息](/articles/rfi/1026686.md)
 
 7-7 [达赖喇嘛86岁生日：余生致力于非暴力和慈悲心价值观](/articles/rfi/1026687.md)
@@ -596,8 +600,4 @@
 7-2 [优衣库重申：没有采用与新疆棉花制造产业强劳相关的产品](/articles/rfi/1026982.md)
 
 7-2 [台湾今报57例本土新冠病例](/articles/rfi/1026983.md)
-
-7-2 [130个国家支持全球向跨国公司最低征税15% 中国最终同意了](/articles/rfi/1026984.md)
-
-7-2 [澳洲防疫情扩散 7月中旬起入境旅客数减半 – 法国国际广播电台 - RFI](/articles/rfi/1026985.md)
 
