--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,10 @@
 路透
 ------
 
+7-7 [中国华北及中南地区中小银行资产质量弱化 必要时或需国股行支持--标普](/articles/reuters/1036043.md)
+
+7-7 [富时罗素：将如期在7月8日把滴滴出行纳入指数 除非暂停交易](/articles/reuters/1036044.md)
+
 7-7 [图表新闻：全球主要央行撤出紧急刺激措施的进展排行榜](/articles/reuters/1036045.md)
 
 7-7 [“作者都不好意思让它见光” 特朗普政府一份外国汽车威胁论报告被公布](/articles/reuters/1036046.md)
@@ -596,8 +600,4 @@
 6-29 [中国万达电影预计上半年盈利6.2-6.8亿元 经营业绩实现扭亏为盈](/articles/reuters/1036341.md)
 
 6-29 [滴滴IPO价格可能定在指导价区间高端或以上--消息人士](/articles/reuters/1036342.md)
-
-6-29 [G20外长疫情后首次举行面对面会谈 推动对全球危机的多边应对](/articles/reuters/1036343.md)
-
-6-29 [王毅称G20成员应采取负责任的宏观经济政策 避免自身举措的负面效应外溢](/articles/reuters/1036344.md)
 
