--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-7 [台湾欢迎美国宣布新任驻台办事处长 北京：挟洋自重注定失败](/articles/voa/1039674.md)
+
 7-7 [美国务卿视频会晤维吾尔人并向达赖喇嘛表达生日祝福](/articles/voa/1039675.md)
 
 7-7 [刀刀见血，滴滴惊魂, 再买中概股“你就是个白痴”](/articles/voa/1039676.md)
@@ -598,6 +600,4 @@
 6-23 [人权报告：中国存在“广泛而系统的”的国家绑架行为](/articles/voa/1039972.md)
 
 6-22 [字节跳动创始人张一鸣辞职避险 捐款5亿元人民币推动家乡教育](/articles/voa/1039973.md)
-
-6-22 [壹传媒资产被冻结 苹果面临停刊 报禁时代或降临香港](/articles/voa/1039974.md)
 
