--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+7-7 [立陶宛盼今秋开驻台办事处 经济部长：不担心中国制裁](/articles/dw/1041535.md)
+
 7-7 [北京整顿科技公司 中概股重挫](/articles/dw/1041536.md)
 
 7-7 [科技公司遭中国整顿  致中概股重挫](/articles/dw/1041537.md)
@@ -598,6 +600,4 @@
 6-21 [合约终止六年後才被解聘 中国学者向清华讨公道](/articles/dw/1041833.md)
 
 6-21 [近20年来首次 香港七一游行不办了](/articles/dw/1041834.md)
-
-6-21 [病毒溯源兵分两路 美拉民主阵线压中国](/articles/dw/1041835.md)
 
