--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,14 @@
 路透
 ------
 
+7-7 [支付宝和微信限制新用户使用滴滴出行小程序 老用户仍可使用--消息](/articles/reuters/1036035.md)
+
+7-7 [中国6月末外汇储备环比减少78亿美元 结束此前两月增势--央行](/articles/reuters/1036036.md)
+
+7-7 [“长赐号”货轮与苏伊士运河达成赔偿协议 扣留三个月后今天被放行](/articles/reuters/1036037.md)
+
+7-7 [中国股市收升 中国加强对海外上市企业的监管](/articles/reuters/1036038.md)
+
 7-7 [中国粮食和物资储备局投放首批国家储备铜铝锌共10万吨 近期将继续投放](/articles/reuters/1036039.md)
 
 7-7 [中国将依法查处平台企业垄断案件 重点围绕医药、汽车等领域执法--市监总局（更新版）](/articles/reuters/1036040.md)
@@ -592,12 +600,4 @@
 6-30 [中储粮周五将拍卖逾15万吨进口玉米 含12万吨美国转基因品种](/articles/reuters/1036333.md)
 
 6-30 [叮咚买菜纽约上市首日开盘上涨19% 估值达66亿美元](/articles/reuters/1036334.md)
-
-6-30 [滴滴美国IPO筹资40亿美元 发行价定在指导价区间高端--消息](/articles/reuters/1036335.md)
-
-6-30 [美元升至一周高位 新冠疫情反扑恐累及全球复苏](/articles/reuters/1036336.md)
-
-6-30 [美股标普500指数和纳指双双创下收盘新高 受苹果等科技股带动](/articles/reuters/1036337.md)
-
-6-30 [油价持稳 OPEC增强市场对于需求复苏的希望](/articles/reuters/1036338.md)
 
