--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+7-7 [不信小邮差能行吗｜b站百万网红“机智的党妹”被批辱华，遭新华社点名](/articles/cdt/380583.md)
+
 7-7 [远见聚焦 | 我们绝不能在大是大非问题上故意造谣说谎](/articles/cdt/380601.md)
 
 7-7 [王犀知 | 我爱国，所以我暴打两位宇航科学家](/articles/cdt/380603.md)
@@ -598,6 +600,4 @@
 5-29 [Matters | 陈纯：中国国家主义的分裂](/articles/cdt/382058.md)
 
 5-29 [立场新闻 | 六四游行集会上诉遭驳回 支联会副主席：以个人名义守32年约定](/articles/cdt/382062.md)
-
-5-29 [众新闻 | 播六四长跑片后，香港电台《议事论事》节目班底大换血](/articles/cdt/382063.md)
 
