--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+7-7 [德中防长视频通话 谈及印太局势、人权议题](/articles/dw/1041533.md)
+
 7-7 [澳大利亚否认干预中国疫苗推广](/articles/dw/1041534.md)
 
 7-7 [立陶宛盼今秋开驻台办事处 经济部长：不担心中国制裁](/articles/dw/1041535.md)
@@ -598,6 +600,4 @@
 6-21 [客座评论：拜登主义——没有特朗普的特朗普抗中路线](/articles/dw/1041831.md)
 
 6-21 [与中共一起走完长征的德国人](/articles/dw/1041832.md)
-
-6-21 [合约终止六年後才被解聘 中国学者向清华讨公道](/articles/dw/1041833.md)
 
