--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,14 @@
 路透
 ------
 
+7-7 [美指持坚人民币收盘微跌 FED会议纪要或为美元指引方向](/articles/reuters/1036031.md)
+
+7-7 [焦点：面对高油价该增产还是扩大对冲？ 美国页岩油业者踌躇不前](/articles/reuters/1036032.md)
+
+7-7 [中国处罚互联网领域22起违法经营者集中案 阿里和腾讯分别被罚300万和250万](/articles/reuters/1036033.md)
+
+7-7 [下半年中国经济增速料放缓 当前是合理、适度降息好时机--前央行官员](/articles/reuters/1036034.md)
+
 7-7 [支付宝和微信限制新用户使用滴滴出行小程序 老用户仍可使用--消息](/articles/reuters/1036035.md)
 
 7-7 [中国6月末外汇储备环比减少78亿美元 结束此前两月增势--央行](/articles/reuters/1036036.md)
@@ -592,12 +600,4 @@
 6-30 [独家：谷歌搁置与法国出版商的协议 等候反垄断决定--消息](/articles/reuters/1036329.md)
 
 6-30 [美联储理事沃勒称不排除2022年加息的可能性](/articles/reuters/1036330.md)
-
-6-30 [焦点：OPEC称全球石油需求将在下半年强劲反弹 但新冠变种带来风险](/articles/reuters/1036331.md)
-
-6-30 [拜登在威州推广基建计划 称这项“世代投资”将创造数百万工作岗位](/articles/reuters/1036332.md)
-
-6-30 [中储粮周五将拍卖逾15万吨进口玉米 含12万吨美国转基因品种](/articles/reuters/1036333.md)
-
-6-30 [叮咚买菜纽约上市首日开盘上涨19% 估值达66亿美元](/articles/reuters/1036334.md)
 
