--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+7-7 [争议重重 英国半导体厂商被中资收购](/articles/dw/1041529.md)
+
+7-7 [欧洲杯赛成为新冠疫情加速器](/articles/dw/1041530.md)
+
 7-7 [6年来首次 莫迪公开祝贺达赖喇嘛生日](/articles/dw/1041531.md)
 
 7-7 [10年磨一剑 一天一高楼](/articles/dw/1041532.md)
@@ -596,8 +600,4 @@
 6-21 [一带一路中美洲大变调](/articles/dw/1041827.md)
 
 6-21 [“患难见真情” 美国250万剂莫德纳疫苗抵台](/articles/dw/1041828.md)
-
-6-21 [夏天里必须掌握的德语词汇](/articles/dw/1041829.md)
-
-6-21 [中国继续严打“挖矿” 比特币再次跳水](/articles/dw/1041830.md)
 
