--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+7-7 [德国一周大小事](/articles/dw/1041528.md)
+
 7-7 [争议重重 英国半导体厂商被中资收购](/articles/dw/1041529.md)
 
 7-7 [欧洲杯赛成为新冠疫情加速器](/articles/dw/1041530.md)
@@ -598,6 +600,4 @@
 6-21 [北京如何通过国安法重塑香港？](/articles/dw/1041826.md)
 
 6-21 [一带一路中美洲大变调](/articles/dw/1041827.md)
-
-6-21 [“患难见真情” 美国250万剂莫德纳疫苗抵台](/articles/dw/1041828.md)
 
