--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -7,6 +7,8 @@
 
 7-7 [不信小邮差能行吗｜b站百万网红“机智的党妹”被批辱华，遭新华社点名](/articles/cdt/380583.md)
 
+7-7 [【CDT月度人物】《苹果日报》创始人黎智英与其他被捕成员](/articles/cdt/380588.md)
+
 7-7 [远见聚焦 | 我们绝不能在大是大非问题上故意造谣说谎](/articles/cdt/380601.md)
 
 7-7 [王犀知 | 我爱国，所以我暴打两位宇航科学家](/articles/cdt/380603.md)
@@ -598,6 +600,4 @@
 5-30 [念念回声 | 女人拿性讲脱口秀，光宗耀祖，写进族谱](/articles/cdt/382053.md)
 
 5-30 [【旧闻重温】地铁上的安全员](/articles/cdt/382056.md)
-
-5-29 [Matters | 陈纯：中国国家主义的分裂](/articles/cdt/382058.md)
 
