--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+7-7 [海地总统遇刺身亡](/articles/dw/1041523.md)
+
 7-7 [德语媒体: 中国非洲搞双赢 欧洲何处去?](/articles/dw/1041524.md)
 
 7-7 [微信无预警关闭中国高校LGBT公众号](/articles/dw/1041525.md)
@@ -598,6 +600,4 @@
 6-21 [联盟党竞选纲领：最大国际挑战来自中国](/articles/dw/1041821.md)
 
 6-21 [“躺平“也不行：“躺平T恤”下架是为何？](/articles/dw/1041822.md)
-
-6-21 [欧洲足联不再干预  诺伊尔可继续佩戴彩虹袖标](/articles/dw/1041823.md)
 
