--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,16 @@
 法广
 ------
 
+7-8 [俄罗斯客机坠毁寻获19人遗骸 – 法国国际广播电台 - RFI](/articles/rfi/1026645.md)
+
+7-8 [G20财长威尼斯开会 料背书跨国企业税改革案 – 法国国际广播电台 - RFI](/articles/rfi/1026646.md)
+
+7-7 [海地总统莫伊兹遇刺身亡的背景](/articles/rfi/1026647.md)
+
+7-7 [史瓦帝尼抗议激化当局动用武力 官员称27人丧命 – 法国国际广播电台 - RFI](/articles/rfi/1026648.md)
+
+7-7 [印度国宝级巨星狄利普库玛逝世 – 法国国际广播电台 - RFI](/articles/rfi/1026649.md)
+
 7-7 [海地总统被暗杀后 多米尼加&quot;立即关闭&quot;边界](/articles/rfi/1026650.md)
 
 7-7 [审查制度延伸压力下的香港电影 - 特别节目](/articles/rfi/1026651.md)
@@ -590,14 +600,4 @@
 7-3 [印度热浪来袭气温冲9年高点   新德里飙41摄氏度](/articles/rfi/1026943.md)
 
 7-3 [法媒采访台湾外长吴钊燮：台湾未来应由人民自己决定](/articles/rfi/1026944.md)
-
-7-3 [130国达成全球税收协议，为全面国际改革铺平了道路 - 要闻解说](/articles/rfi/1026945.md)
-
-7-3 [马斯克为占中国市场给习近平雪中送炭 - 要闻分析](/articles/rfi/1026946.md)
-
-7-3 [俄罗斯单日染疫不治连4天创新高  拒绝实施新封锁 – 法国国际广播电台 - RFI](/articles/rfi/1026947.md)
-
-7-2 [全球忙抗疫 人口贩运更猖獗 – 法国国际广播电台 - RFI](/articles/rfi/1026948.md)
-
-7-2 [美短跑女将验出大麻阳性 错失东京奥运100米竞赛 – 法国国际广播电台 - RFI](/articles/rfi/1026949.md)
 
