--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+7-8 [丢手机惹祸：西藏僧侣遭判重刑](/articles/rfi/1026643.md)
+
+7-8 [海地总统遇刺身亡 白宫表震惊英首相强生吁冷静 – 法国国际广播电台 - RFI](/articles/rfi/1026644.md)
+
 7-8 [俄罗斯客机坠毁寻获19人遗骸 – 法国国际广播电台 - RFI](/articles/rfi/1026645.md)
 
 7-8 [G20财长威尼斯开会 料背书跨国企业税改革案 – 法国国际广播电台 - RFI](/articles/rfi/1026646.md)
@@ -596,8 +600,4 @@
 7-3 [日本成衣公司“优衣库”否认供应链有强迫劳动](/articles/rfi/1026941.md)
 
 7-3 [波音737货机2日凌晨迫降檀香山外海  2飞行员获救](/articles/rfi/1026942.md)
-
-7-3 [印度热浪来袭气温冲9年高点   新德里飙41摄氏度](/articles/rfi/1026943.md)
-
-7-3 [法媒采访台湾外长吴钊燮：台湾未来应由人民自己决定](/articles/rfi/1026944.md)
 
