--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-8 [云南省中缅边境城市瑞丽面临第四波疫情冲击](/articles/voa/1039666.md)
+
 7-7 [澳中较量 中国落败，堪培拉对北京立场更趋强硬](/articles/voa/1039667.md)
 
 7-7 [海地总统遇刺身亡，美国称袭击为“令人发指的罪行”](/articles/voa/1039668.md)
@@ -598,6 +600,4 @@
 6-23 [拜登政府牵头重塑供应链 实施效果待考验](/articles/voa/1039964.md)
 
 6-23 [美司法部宣布打击非法枪支贩运计划](/articles/voa/1039965.md)
-
-6-23 [瑞典一法院维持对华为的禁令](/articles/voa/1039966.md)
 
