--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+7-8 [华为控告威瑞森专利侵权案开始选择陪审团 即将进入庭审](/articles/voa/1039664.md)
+
+7-8 [澳中较量 堪培拉对北京立场更趋强硬](/articles/voa/1039665.md)
+
 7-8 [云南省中缅边境城市瑞丽面临第四波疫情冲击](/articles/voa/1039666.md)
 
 7-7 [澳中较量 中国落败，堪培拉对北京立场更趋强硬](/articles/voa/1039667.md)
@@ -596,8 +600,4 @@
 6-23 [众议院共和党领袖提出在新冠问题上对中共问责的路线图](/articles/voa/1039962.md)
 
 6-23 [澳大利亚强烈反对联合国计划在中国主办的世遗会上将大堡礁划归“濒危”](/articles/voa/1039963.md)
-
-6-23 [拜登政府牵头重塑供应链 实施效果待考验](/articles/voa/1039964.md)
-
-6-23 [美司法部宣布打击非法枪支贩运计划](/articles/voa/1039965.md)
 
