--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+7-8 [英国朝野呼吁政府抵制北京冬奥 促联合国调查新疆](/articles/rfa/1045128.md)
+
 7-8 [科学家们发公开信  呼吁加速新冠病毒起源的调查](/articles/rfa/1045129.md)
 
 7-8 [蔡霞、明居正看中共百年：应学蒋经国走民主之路](/articles/rfa/1045130.md)
@@ -598,6 +600,4 @@
 6-3 [出版物含“违禁材料”    加拿大知名学者寇谧将的领英中国网页遭封杀](/articles/rfa/1045426.md)
 
 6-3 [香港强推普通话   反送中成颜色革命  年轻人何去何从？](/articles/rfa/1045427.md)
-
-6-3 [反对建复旦大学分校  布达佩斯市长改路名为达赖喇嘛](/articles/rfa/1045428.md)
 
