--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-8 [热带风暴“艾尔莎”在北佛罗里达州登陆](/articles/voa/1039662.md)
+
 7-8 [欧洲议会将通过动议抵制北京冬奥会，英工党吁UN调查新疆问题](/articles/voa/1039663.md)
 
 7-8 [华为控告威瑞森专利侵权案开始选择陪审团 即将进入庭审](/articles/voa/1039664.md)
@@ -598,6 +600,4 @@
 6-23 [参议院共和党人阻止美国投票权法案向前推进](/articles/voa/1039960.md)
 
 6-23 [伊朗国家新闻网站显示其被美国政府没收](/articles/voa/1039961.md)
-
-6-23 [众议院共和党领袖提出在新冠问题上对中共问责的路线图](/articles/voa/1039962.md)
 
