--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+7-8 [同伴EDU：请记录一切](/articles/cdt/380559.md)
+
+7-8 [北青深一度 | 17岁少年工厂实习坠亡：生前遭遇“旷工开除”警告 | 深度报道](/articles/cdt/380561.md)
+
 7-7 [EKB行星｜代表中国“最有希望群体”的招生海报让人大跌眼镜](/articles/cdt/380571.md)
 
 7-7 [德国之声｜称被媒体抹黑 德国“亲中网红”众筹打官司](/articles/cdt/380573.md)
@@ -596,8 +600,4 @@
 5-30 [【网络民议】豆瓣躺平组被炸了](/articles/cdt/382038.md)
 
 5-30 [干货 | 怎样靠战狼爽文洗脑诈骗40亿？](/articles/cdt/382040.md)
-
-5-30 [【新闻连连看】北京对牌匾标识千店一面说不](/articles/cdt/382048.md)
-
-5-30 [多数事务社｜社会：Privilege事件 与高傲一起尽数体现的还有无知与冷漠](/articles/cdt/382051.md)
 
