--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+7-8 [中国互联网平台再遭罚  国际投资者掀抛售潮](/articles/rfa/1045126.md)
+
 7-8 [中国LGBT团体微信公众号集体被封  名称变为“未命名公众号”](/articles/rfa/1045127.md)
 
 7-8 [英国朝野呼吁政府抵制北京冬奥 促联合国调查新疆](/articles/rfa/1045128.md)
@@ -598,6 +600,4 @@
 6-3 [香港六四活动或成历史   继续纪念八九意义何在？](/articles/rfa/1045424.md)
 
 6-3 [专访苏葆立：从胡耀邦之死到天安门的枪响(上集)](/articles/rfa/1045425.md)
-
-6-3 [出版物含“违禁材料”    加拿大知名学者寇谧将的领英中国网页遭封杀](/articles/rfa/1045426.md)
 
