--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,16 @@
 法广
 ------
 
+7-8 [新加坡打中国疫苗不作数 泰国质疑科兴疫苗效力](/articles/rfi/1026633.md)
+
+7-8 [全球染疫死亡人数破400万大关 法国重症患者人数降至1000例以下](/articles/rfi/1026634.md)
+
+7-8 [中资收购英国最大半导体商NWF 约翰逊：&quot;要查&quot;](/articles/rfi/1026635.md)
+
+7-8 [美国呼吁海地维持今年9月的总统及立法选举 安理会今天举行紧急会议](/articles/rfi/1026636.md)
+
+7-8 [克里米亚 :俄罗斯法庭开审乌克兰记者](/articles/rfi/1026637.md)
+
 7-8 [法国导演弗朗索瓦-欧容第四度瞄准金棕榈奖](/articles/rfi/1026638.md)
 
 7-8 [生活与艺术的爱吹散疫情迷雾：阿维尼翁戏剧节OFF部分开幕！](/articles/rfi/1026639.md)
@@ -590,14 +600,4 @@
 7-3 [沙波瓦洛夫晋温网16强 赞莫瑞英雄 – 法国国际广播电台 - RFI](/articles/rfi/1026931.md)
 
 7-3 [乔科维奇击败库德拉 生涯13度打进温网男单16强 – 法国国际广播电台 - RFI](/articles/rfi/1026932.md)
-
-7-3 [就业报告强劲 美股3大指数创新高 – 法国国际广播电台 - RFI](/articles/rfi/1026933.md)
-
-7-3 [波音737货机发动机失灵迫降海上 2机师伤势严重 – 法国国际广播电台 - RFI](/articles/rfi/1026934.md)
-
-7-3 [欧国杯8强赛 义大利2:1踢走比利时 – 法国国际广播电台 - RFI](/articles/rfi/1026935.md)
-
-7-3 [俄罗斯单日新冠确诊病例连续4天创新高 当局拒绝新的封锁](/articles/rfi/1026936.md)
-
-7-3 [“汉服”热：“具有中国特色的迪士尼化”正在进行中 - 法国世界报](/articles/rfi/1026937.md)
 
