--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-8 [海地在总统遭暗杀后宣布进入戒严状态](/articles/voa/1039660.md)
+
 7-8 [美国政府撤回一项不受欢迎的国际学生签证规则](/articles/voa/1039661.md)
 
 7-8 [热带风暴“艾尔莎”在北佛罗里达州登陆](/articles/voa/1039662.md)
@@ -598,6 +600,4 @@
 6-23 [匈牙利反对派齐声承诺，若当选就叫停中资项目](/articles/voa/1039958.md)
 
 6-23 [塔利班扩大占领地盘，美国建议减缓撤军速度](/articles/voa/1039959.md)
-
-6-23 [参议院共和党人阻止美国投票权法案向前推进](/articles/voa/1039960.md)
 
