--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,7 +3,7 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
-7-8 [同伴EDU：请记录一切](/articles/cdt/380559.md)
+7-8 [同伴EDU | 请记录一切](/articles/cdt/380559.md)
 
 7-8 [北青深一度 | 17岁少年工厂实习坠亡：生前遭遇“旷工开除”警告 | 深度报道](/articles/cdt/380561.md)
 
