--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+7-8 [海地总统遇刺身亡 通讯部官员：嫌犯已落网 – 法国国际广播电台 - RFI](/articles/rfi/1026627.md)
+
 7-8 [习近平讲话出状况 完了吗？](/articles/rfi/1026628.md)
 
 7-8 [法国世界报：刺杀海地总统的行动小组讲英语和西班牙语，谎称美国缉毒队 - 法国世界报](/articles/rfi/1026629.md)
@@ -598,6 +600,4 @@
 7-3 [中印均向边境增兵数万 规模创数十年之最 战云漂浮？](/articles/rfi/1026925.md)
 
 7-3 [中国前瞻布局6G网络技术储备 指深化“一带一路”国际合作](/articles/rfi/1026926.md)
-
-7-3 [美国众议院因两党分歧延期讨论提升对华竞争力的全面议案](/articles/rfi/1026927.md)
 
