--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,12 @@
 纽约时报
 ------
 
+7-8 [当“战狼”主导中国的外交声音（中）：赵立坚如何在巴基斯坦成为Twitter“网红”](/articles/nyt/1046623.md)
+
+7-8 [霞浦，中国的网红“打卡”点和摆拍“圣地”](/articles/nyt/1046624.md)
+
+7-8 [简报：海地总统遇刺身亡；当“战狼”主导中国的外交声音](/articles/nyt/1046625.md)
+
 7-7 [当“战狼”主导中国的外交声音（上）：赵立坚“一帖成名”](/articles/nyt/1046626.md)
 
 7-7 [对中国商界精英来说，远离政治不再是可能选项](/articles/nyt/1046627.md)
@@ -594,10 +600,4 @@
 4-27 [中国推“延迟退休”应对老龄化，引发争议和反弹](/articles/nyt/1046921.md)
 
 4-27 [尹汝贞，韩国电影届的“米纳里”](/articles/nyt/1046922.md)
-
-4-27 [纽约61岁中国移民遇袭，被多次踢踩头部伤情危重](/articles/nyt/1046923.md)
-
-4-27 [赵婷奥斯卡获奖消息在中国遭审查](/articles/nyt/1046924.md)
-
-4-26 [从毛泽东到习近平](/articles/nyt/1046925.md)
 
