--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+7-8 [【网络民议】人社部：将逐步提高领取基本养老金最低缴费年限  网友：怕是活不到领养老金那天](/articles/cdt/380555.md)
+
 7-8 [同伴EDU | 请记录一切](/articles/cdt/380559.md)
 
 7-8 [北青深一度 | 17岁少年工厂实习坠亡：生前遭遇“旷工开除”警告 | 深度报道](/articles/cdt/380561.md)
@@ -598,6 +600,4 @@
 5-30 [凹凸镜DOC | 何伟将告别川大教职：成都留下美好回忆，希望还能重返中国](/articles/cdt/382035.md)
 
 5-30 [【网络民议】豆瓣躺平组被炸了](/articles/cdt/382038.md)
-
-5-30 [干货 | 怎样靠战狼爽文洗脑诈骗40亿？](/articles/cdt/382040.md)
 
