--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,8 @@
 路透
 ------
 
+7-8 [美国不会立即取消国际旅行限制--白宫官员](/articles/reuters/1035996.md)
+
 7-8 [分析：美国IPO市场成为中概股雷区 中国加强监管带来不确定性](/articles/reuters/1035997.md)
 
 7-8 [英国结束封锁措施后招聘热潮达到创纪录水平--REC](/articles/reuters/1035998.md)
@@ -598,6 +600,4 @@
 6-30 [人民币缩量收跌至近一周新低 6月贬幅1.56%创近两年来最大](/articles/reuters/1036294.md)
 
 6-30 [中国股市收涨 主要科技股指数创一年来最大季度涨幅](/articles/reuters/1036295.md)
-
-6-30 [拜登将提名学者古特曼担任美国驻德国大使--消息人士](/articles/reuters/1036296.md)
 
