--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+7-8 [刺杀总统兇嫌落网 外界关注海地政局发展](/articles/dw/1041516.md)
+
 7-8 [香港人权组织停运 两周内13团体解散](/articles/dw/1041517.md)
 
 7-8 [香港人权组织停运 两周内13组织解散](/articles/dw/1041518.md)
@@ -598,6 +600,4 @@
 6-21 [台湾陆委邱太三发声明谴责矮化台湾](/articles/dw/1041814.md)
 
 6-21 [东京奥运会：现场观众上限一万人](/articles/dw/1041815.md)
-
-6-21 [德语媒体: 中国为何不肯放松防疫措施](/articles/dw/1041816.md)
 
