--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+7-8 [路透：零氪科技搁置在美上市计划](/articles/voa/1039649.md)
+
+7-8 [美军高级情报官：中国威胁尚未引起美国一些决策者的足够重视](/articles/voa/1039650.md)
+
 7-8 [拜登发布行政命令延续特朗普针对香港局势宣布的国家紧急状态](/articles/voa/1039651.md)
 
 7-8 [塔利班冲入阿富汗一省府 让数百囚犯逃离](/articles/voa/1039652.md)
@@ -596,8 +600,4 @@
 6-24 [消息人士：拜登政府认为现在是与北京对话的时候了](/articles/voa/1039947.md)
 
 6-23 [晾衣架挂“光复香港 时代革命”横幅 港男被指“煽动”遭捕](/articles/voa/1039948.md)
-
-6-23 [首宗香港国安法案件开审 凌驾基本法 被告恐遭重判](/articles/voa/1039949.md)
-
-6-23 [苹果日报主笔被抓，“天亮尿床”警示走红网络](/articles/voa/1039950.md)
 
