--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,12 @@
 路透
 ------
 
+7-8 [独家：继当局加强监管后 中国零氪科技成为首家搁置赴美IPO的中国企业（更新版）](/articles/reuters/1035988.md)
+
+7-8 [中国央行副行长：实施稳健货币政策 对蚂蚁采取的措施会推行到其他支付市场主体](/articles/reuters/1035989.md)
+
+7-8 [焦点：降准风起引爆中国债市 惊喜过后政策松动力度决定后市空间](/articles/reuters/1035990.md)
+
 7-8 [中国工信部：持续开展APP专项整治 阿里、腾讯、字节跳动等已完成整改](/articles/reuters/1035991.md)
 
 7-8 [独家：中国零氪科技搁置2.11亿美元的美国IPO--消息人士](/articles/reuters/1035992.md)
@@ -594,10 +600,4 @@
 6-30 [图表新闻：2021上半年结束 投资者关注五大市场趋势](/articles/reuters/1036286.md)
 
 6-30 [俄罗斯总统普京称他已接种俄罗斯的SPUTNIK V新冠疫苗](/articles/reuters/1036287.md)
-
-6-30 [中石油解除数名贸易主管职务 与违规售油调查有关--消息人士](/articles/reuters/1036288.md)
-
-6-30 [巴克莱将伦敦投资银行员工迁入附近总部 整合办公空间](/articles/reuters/1036289.md)
-
-6-30 [中国沪深交易所双双下调基金交易经手费 上交所同时下调交易单元使用费](/articles/reuters/1036290.md)
 
