--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -5,7 +5,7 @@
 
 7-8 [【网络民议】人社部：将逐步提高领取基本养老金最低缴费年限  网友：怕是活不到领养老金那天](/articles/cdt/380555.md)
 
-7-8 [同伴EDU | 请记录一切](/articles/cdt/380559.md)
+7-8 [【404文库】同伴EDU | 请记录一切](/articles/cdt/380559.md)
 
 7-8 [北青深一度 | 17岁少年工厂实习坠亡：生前遭遇“旷工开除”警告 | 深度报道](/articles/cdt/380561.md)
 
