--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+7-8 [滴滴再遭罚款，它的麻烦可能才刚刚开始](/articles/nyt/1046622.md)
+
 7-8 [当“战狼”主导中国的外交声音（中）：赵立坚如何在巴基斯坦成为Twitter“网红”](/articles/nyt/1046623.md)
 
 7-8 [霞浦，中国的网红“打卡”点和摆拍“圣地”](/articles/nyt/1046624.md)
@@ -598,6 +600,4 @@
 4-27 [扎克伯格和库克是如何成为敌人的](/articles/nyt/1046920.md)
 
 4-27 [中国推“延迟退休”应对老龄化，引发争议和反弹](/articles/nyt/1046921.md)
-
-4-27 [尹汝贞，韩国电影届的“米纳里”](/articles/nyt/1046922.md)
 
