--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+7-8 [中国收紧海外上市规定，滴滴股价大跌20%](/articles/ft/1045365.md)
+
 7-8 [海地在总统遇刺后进入紧急状态](/articles/ft/1045366.md)
 
 7-8 [2021上半场：对冲基金折戟沉沙的回视](/articles/ft/1045367.md)
@@ -598,6 +600,4 @@
 5-6 [美国支持豁免新冠疫苗专利 中国疫苗股受冲击](/articles/ft/1045663.md)
 
 5-6 [股票印花税：港股不能承受之轻](/articles/ft/1045664.md)
-
-5-6 [当国际品牌遭遇钟爱国潮风的00后消费者](/articles/ft/1045665.md)
 
