--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+7-8 [中国高校LGBT帐号遭封  学者：同志团体的「致命一击」](/articles/dw/1041515.md)
+
 7-8 [刺杀总统兇嫌落网 外界关注海地政局发展](/articles/dw/1041516.md)
 
 7-8 [香港人权组织停运 两周内13团体解散](/articles/dw/1041517.md)
@@ -598,6 +600,4 @@
 6-22 [联合国官員盼今年入疆调查 中：应是友好访问](/articles/dw/1041813.md)
 
 6-21 [台湾陆委邱太三发声明谴责矮化台湾](/articles/dw/1041814.md)
-
-6-21 [东京奥运会：现场观众上限一万人](/articles/dw/1041815.md)
 
