--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+7-8 [中国政府重拳“打滴滴”　究竟为哪般？](/articles/dw/1041514.md)
+
 7-8 [中国高校LGBT帐号遭封  学者：同志团体的「致命一击」](/articles/dw/1041515.md)
 
 7-8 [刺杀总统兇嫌落网 外界关注海地政局发展](/articles/dw/1041516.md)
@@ -598,6 +600,4 @@
 6-22 [《苹果日报》申请资产解封 26日后恐停刊](/articles/dw/1041812.md)
 
 6-22 [联合国官員盼今年入疆调查 中：应是友好访问](/articles/dw/1041813.md)
-
-6-21 [台湾陆委邱太三发声明谴责矮化台湾](/articles/dw/1041814.md)
 
