--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+7-8 [中缅边界建千公里隔离墙 防偷渡及宗教渗透](/articles/rfa/1045124.md)
+
 7-8 [学者：没有自由、正义的中国发展模式不能持久](/articles/rfa/1045125.md)
 
 7-8 [中国互联网平台再遭罚  国际投资者掀抛售潮](/articles/rfa/1045126.md)
@@ -598,6 +600,4 @@
 6-3 [旅游、喝茶、约谈及拘留  中国各地严防六四言论](/articles/rfa/1045422.md)
 
 6-3 [中国年轻人只知“抖音”不知“六四”  惟数十年口耳相传传承不断](/articles/rfa/1045423.md)
-
-6-3 [香港六四活动或成历史   继续纪念八九意义何在？](/articles/rfa/1045424.md)
 
