--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,16 @@
 法广
 ------
 
+7-8 [巴赫来日 东京进入第四次“紧急事态宣言”](/articles/rfi/1026604.md)
+
+7-8 [动员疫苗接种 Delta威胁下法国与时间赛跑 - 法国报纸摘要](/articles/rfi/1026605.md)
+
+7-8 [全球新冠传染人数再度回升 世卫敦促不要过早放松](/articles/rfi/1026606.md)
+
+7-8 [日本宣布东京4度紧急事态7/12上路 涵盖东奥赛期 – 法国国际广播电台 - RFI](/articles/rfi/1026607.md)
+
+7-8 [文学漫步 水上重新发现巴黎 - 法国风光](/articles/rfi/1026608.md)
+
 7-8 [“海上观察”民间组织指控利比亚海岸警卫队袭击难民船](/articles/rfi/1026609.md)
 
 7-8 [基地遇袭后 美驻伊拉克使馆附近遭火箭攻击 – 法国国际广播电台 - RFI](/articles/rfi/1026610.md)
@@ -590,14 +600,4 @@
 7-4 [黎巴嫩:贝鲁特港2020爆炸调查有进展](/articles/rfi/1026902.md)
 
 7-3 [蔡霞：宣誓永不叛党显示中共已经不是现代政党 - 要闻解说](/articles/rfi/1026903.md)
-
-7-3 [防范变种病毒  沙国停飞前往阿联等3国班机 – 法国国际广播电台 - RFI](/articles/rfi/1026904.md)
-
-7-3 [鸿海、台积电传购得1000万BNT疫苗 台湾官方感谢但强调德国原厂生产直接运货](/articles/rfi/1026905.md)
-
-7-3 [《新苏黎世报》评论：习近平是控制狂 也是中国经济发展最大绊脚石](/articles/rfi/1026906.md)
-
-7-3 [《新德国报》：中国必须证明自己有领导能力](/articles/rfi/1026907.md)
-
-7-3 [缅甸政变军头今天过生日 抗议民众烧其画像送葬](/articles/rfi/1026908.md)
 
