--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+7-8 [NGOCN｜弦子微博被新浪官方禁言一年，已第二次被禁言](/articles/cdt/380544.md)
+
+7-8 [澎湃新闻｜对话“打工攒钱十年入住毛坯房”95后女孩：羡慕能上大学的人](/articles/cdt/380546.md)
+
 7-8 [小晖有思｜李承鹏把高晓松的皮给扒了](/articles/cdt/380547.md)
 
 7-8 [【网络民议】人社部：将逐步提高领取基本养老金最低缴费年限  网友：怕是活不到领养老金那天](/articles/cdt/380555.md)
@@ -596,8 +600,4 @@
 5-31 [【网络民议】我不买三辆劳斯莱斯是因为劳斯莱斯限购吗？](/articles/cdt/382003.md)
 
 5-31 [中产生活观察｜何伟离开中国：一种结束](/articles/cdt/382005.md)
-
-5-31 [GQ报道｜这里是白银越野赛全部21位逝者的故事](/articles/cdt/382028.md)
-
-5-30 [凹凸镜DOC | 何伟将告别川大教职：成都留下美好回忆，希望还能重返中国](/articles/cdt/382035.md)
 
