--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,14 @@
 法广
 ------
 
+7-8 [主办国越南疫情升温 东南亚运动会恐延期1年 – 法国国际广播电台 - RFI](/articles/rfi/1026598.md)
+
+7-8 [市场忧心通膨 欧股开低 – 法国国际广播电台 - RFI](/articles/rfi/1026599.md)
+
+7-8 [哥伦比亚去年消失森林面积增加8% – 法国国际广播电台 - RFI](/articles/rfi/1026600.md)
+
+7-8 [海地总统遇刺身亡，该国面临新一轮暴力升级 - 要闻解说](/articles/rfi/1026601.md)
+
 7-8 [雪梨疫情升温 澳洲总理送30万剂疫苗 – 法国国际广播电台 - RFI](/articles/rfi/1026602.md)
 
 7-8 [中共百年党庆的规模其实比外界预想中内敛和低调 - 观察中国](/articles/rfi/1026603.md)
@@ -592,12 +600,4 @@
 7-4 [关于7月7日、14日国航CA934航班被取消的紧急提醒](/articles/rfi/1026896.md)
 
 7-4 [刺警案延烧      港人持鲜花悼凶嫌](/articles/rfi/1026897.md)
-
-7-4 [有专家建议突破世卫由G7组建机构调查病毒来源](/articles/rfi/1026898.md)
-
-7-4 [巴西：南大河州长宣布自己是同性恋](/articles/rfi/1026899.md)
-
-7-4 [习近平向西方发出严重警告 严峻挑战就在眼前 - 要闻分析](/articles/rfi/1026900.md)
-
-7-4 [瑞士名将费德瑞击败英国对手 第18度晋级温网16强 – 法国国际广播电台 - RFI](/articles/rfi/1026901.md)
 
