--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+7-8 [在美国的“躺平”和“躺不平”](/articles/nyt/1046619.md)
+
 7-8 [“谁是我们的敌人？”：那些“拥抱”毛泽东的中国年轻人](/articles/nyt/1046620.md)
 
 7-8 [海地总统遇刺身亡：一个脆弱国家的政治暴力史](/articles/nyt/1046621.md)
@@ -598,6 +600,4 @@
 4-28 [中美之间必有一战吗？](/articles/nyt/1046917.md)
 
 4-28 [“这是谋杀”：印度疫情失控，疾病和死亡无处不在](/articles/nyt/1046918.md)
-
-4-28 [麦香鱼，我理想中的“完美”快餐](/articles/nyt/1046919.md)
 
