--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+7-8 [【CDT推荐】本周推荐媒体：厌女文化抵制者、保护卫士（Safeguard Defenders）](/articles/cdt/380538.md)
+
+7-8 [【图说天朝】“所有人都是少数群体中的一员”](/articles/cdt/380539.md)
+
 7-8 [NGOCN｜弦子微博被新浪官方禁言一年，已第二次被禁言](/articles/cdt/380544.md)
 
 7-8 [澎湃新闻｜对话“打工攒钱十年入住毛坯房”95后女孩：羡慕能上大学的人](/articles/cdt/380546.md)
@@ -596,8 +600,4 @@
 5-31 [【图说天朝】三孩生育政策来了，微信朋友圈已成段子海洋](/articles/cdt/381987.md)
 
 5-31 [骚客文艺｜不会吧，白岩松老师](/articles/cdt/381988.md)
-
-5-31 [【网络民议】我不买三辆劳斯莱斯是因为劳斯莱斯限购吗？](/articles/cdt/382003.md)
-
-5-31 [中产生活观察｜何伟离开中国：一种结束](/articles/cdt/382005.md)
 
