--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,16 @@
 德国之声
 ------
 
+7-8 [高官频表态 日本对台政策「战略明朗化」？](/articles/dw/1041504.md)
+
+7-8 [德语媒体：德国第二，谁来当第一？](/articles/dw/1041505.md)
+
+7-8 [“我总觉得欠德国的太多”](/articles/dw/1041506.md)
+
+7-8 [图片回顾中共建政70年之七：中国梦](/articles/dw/1041507.md)
+
+7-8 [维瓦尔第：《夜》](/articles/dw/1041508.md)
+
 7-8 [高官頻表態 日本對台政策「戰略明朗化」？](/articles/dw/1041509.md)
 
 7-8 [还我账号：特朗普控告脸书、推特](/articles/dw/1041510.md)
@@ -590,14 +600,4 @@
 6-22 [中共百年大庆典前夕安保升级](/articles/dw/1041802.md)
 
 6-22 [崔天凯发表辞别信 继任是谁引关注](/articles/dw/1041803.md)
-
-6-22 [史海回眸：80年前德国入侵苏联](/articles/dw/1041804.md)
-
-6-22 [有效率超92%！古巴报告国产疫苗高疗效](/articles/dw/1041805.md)
-
-6-22 [翻开旧报纸：德媒评中共党庆](/articles/dw/1041806.md)
-
-6-22 [世卫讨论东奥疫情管控  观众入场人数成焦点](/articles/dw/1041807.md)
-
-6-22 [屏蔽多个帐号 领英中国称依法执行](/articles/dw/1041808.md)
 
