--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+7-8 [英国议员呼吁抵制北京冬奥 调查新疆“种族灭绝”暴行](/articles/dw/1041501.md)
+
+7-8 [联手垄断：大众、宝马遭欧盟重罚十亿美元](/articles/dw/1041502.md)
+
+7-8 [会飞的汽车](/articles/dw/1041503.md)
+
 7-8 [高官频表态 日本对台政策「战略明朗化」？](/articles/dw/1041504.md)
 
 7-8 [德语媒体：德国第二，谁来当第一？](/articles/dw/1041505.md)
@@ -594,10 +600,4 @@
 6-22 [欧洲杯2020：欧足联禁止慕尼黑体育馆亮灯彩虹](/articles/dw/1041799.md)
 
 6-22 [BDI主席：面对中国 德国应提倡负责任的共存与合作](/articles/dw/1041800.md)
-
-6-22 [评论：联盟党派的竞选纲领无法令人振奋](/articles/dw/1041801.md)
-
-6-22 [中共百年大庆典前夕安保升级](/articles/dw/1041802.md)
-
-6-22 [崔天凯发表辞别信 继任是谁引关注](/articles/dw/1041803.md)
 
