--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+7-8 [港府继续使用国安法打压民主派，拜登延长对香港的国家紧急状态令](/articles/voa/1039644.md)
+
+7-8 [含中华民国国旗白宫抗疫推文被删，台湾吁美不要引发“误解”](/articles/voa/1039645.md)
+
 7-8 [“带着镣铐跳舞”的中国脱口秀](/articles/voa/1039646.md)
 
 7-8 [六个Covid-19高感染率国家中五个依赖中国疫苗](/articles/voa/1039647.md)
@@ -596,8 +600,4 @@
 6-24 [啦啦队员校外骂脏话学校要管？美最高法院判决：不能](/articles/voa/1039942.md)
 
 6-24 [中共严密保安中准备百年党庆 天安门广场封闭周边管制](/articles/voa/1039943.md)
-
-6-24 [特鲁多批北京：连存在侵犯人权的现象都不敢承认](/articles/voa/1039944.md)
-
-6-24 [时事大家谈: 新一波疫情溯源直指武汉，北京备受压力？](/articles/voa/1039945.md)
 
