--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+7-8 [法国新喀里多尼亚“独派”当选政府主席](/articles/rfi/1026586.md)
+
+7-8 [温网女单4强赛  巴蒂直落2击败柯贝晋决赛 – 法国国际广播电台 - RFI](/articles/rfi/1026587.md)
+
+7-8 [海地:刺杀总统4雇佣兵丧命 卸任总理控制国家](/articles/rfi/1026588.md)
+
 7-8 [法新社统计：全球染疫死亡人数破400万 – 法国国际广播电台 - RFI](/articles/rfi/1026589.md)
 
 7-8 [杜拜港口货柜船爆炸 当局展开调查 – 法国国际广播电台 - RFI](/articles/rfi/1026590.md)
@@ -594,10 +600,4 @@
 7-4 [菲国1运输机搭载85人坠毁南部 目前15人获救 – 法国国际广播电台 - RFI](/articles/rfi/1026884.md)
 
 7-4 [日本热海土石流 2死约20人失踪 – 法国国际广播电台 - RFI](/articles/rfi/1026885.md)
-
-7-4 [日本热海恐怖土石流 外出就医、逃往3楼逃一劫 – 法国国际广播电台 - RFI](/articles/rfi/1026886.md)
-
-7-4 [英格兰4比0痛宰乌克兰  顺利挺进欧国杯4强 – 法国国际广播电台 - RFI](/articles/rfi/1026887.md)
-
-7-4 [俄罗斯男网好手梅迪维夫逆转胜 首闯温网16强 – 法国国际广播电台 - RFI](/articles/rfi/1026888.md)
 
