--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+7-8 [东京进入紧急状态 奥运赛事闭门举行](/articles/dw/1041499.md)
+
+7-8 [韩国疫情：单日感染人数激增](/articles/dw/1041500.md)
+
 7-8 [英国议员呼吁抵制北京冬奥 调查新疆“种族灭绝”暴行](/articles/dw/1041501.md)
 
 7-8 [联手垄断：大众、宝马遭欧盟重罚十亿美元](/articles/dw/1041502.md)
@@ -596,8 +600,4 @@
 6-22 [立陶宛宣布捐赠台湾2万剂疫苗](/articles/dw/1041797.md)
 
 6-22 [40多国联合呼吁中国允许独立观察员入疆调查](/articles/dw/1041798.md)
-
-6-22 [欧洲杯2020：欧足联禁止慕尼黑体育馆亮灯彩虹](/articles/dw/1041799.md)
-
-6-22 [BDI主席：面对中国 德国应提倡负责任的共存与合作](/articles/dw/1041800.md)
 
