--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+7-8 [日本第二批捐赠的AZ疫苗运抵台湾，台立法院长赞台日友情](/articles/voa/1039642.md)
+
+7-8 [北京打压滴滴殃及美国投资者](/articles/voa/1039643.md)
+
 7-8 [港府继续使用国安法打压民主派，拜登延长对香港的国家紧急状态令](/articles/voa/1039644.md)
 
 7-8 [含中华民国国旗白宫抗疫推文被删，台湾吁美不要引发“误解”](/articles/voa/1039645.md)
@@ -596,8 +600,4 @@
 6-24 [美国太平洋西北地区面临危险热浪](/articles/voa/1039940.md)
 
 6-24 [密歇根共和党人驳回特朗普有关选举舞弊的指称](/articles/voa/1039941.md)
-
-6-24 [啦啦队员校外骂脏话学校要管？美最高法院判决：不能](/articles/voa/1039942.md)
-
-6-24 [中共严密保安中准备百年党庆 天安门广场封闭周边管制](/articles/voa/1039943.md)
 
