--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+7-8 [台湾邦交国海地总统遇刺  会转向北京吗？](/articles/rfa/1045121.md)
+
 7-8 [4藏僧向海外发微信､捐款 最重判20年 人权观察:西藏人权空前风暴](/articles/rfa/1045122.md)
 
 7-8 [【709六周年】中国维权律师之路已走到尽头?  微弱力量在高压中坚持](/articles/rfa/1045123.md)
@@ -598,6 +600,4 @@
 6-3 [美军电侦机抵近东海 搜集弹道导弹试射情报](/articles/rfa/1045419.md)
 
 6-3 [“转移、做假、中国强大论”  六四洗白论述大举进攻](/articles/rfa/1045420.md)
-
-6-3 [为阻港人悼六四  港府千方百计文攻武吓](/articles/rfa/1045421.md)
 
