--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+7-9 [国民党前主席洪秀柱登陆打疫苗   被批舍近求远](/articles/rfa/1045119.md)
+
 7-8 [香港再爆区议员离职潮   体制内最后民意声音或尽失](/articles/rfa/1045120.md)
 
 7-8 [台湾邦交国海地总统遇刺  会转向北京吗？](/articles/rfa/1045121.md)
@@ -598,6 +600,4 @@
 6-4 [疫苗高峰会日本捐钱和疫苗   制衡中国疫苗外交](/articles/rfa/1045417.md)
 
 6-3 [疫苗战号角响起？危地马拉表态不买中国疫苗也不会跟北京建交](/articles/rfa/1045418.md)
-
-6-3 [美军电侦机抵近东海 搜集弹道导弹试射情报](/articles/rfa/1045419.md)
 
