--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+7-9 [公象离群独自游荡 被麻醉遣送回乡](/articles/rfi/1026580.md)
+
 7-9 [迪拜港大爆炸 肇事集装箱船有易燃物](/articles/rfi/1026581.md)
 
 7-9 [教宗方济各术后住院一度发烧 检查后无异状 – 法国国际广播电台 - RFI](/articles/rfi/1026582.md)
@@ -598,6 +600,4 @@
 7-4 [密道顿强攻32分猎鹰 公鹿47年后闯NBA总冠军赛 – 法国国际广播电台 - RFI](/articles/rfi/1026878.md)
 
 7-4 [凯恩梅开二度 英格兰4比0大胜乌克兰闯欧国杯4强 – 法国国际广播电台 - RFI](/articles/rfi/1026879.md)
-
-7-4 [被控镇压示威 史瓦帝尼邀国际调查团查明 – 法国国际广播电台 - RFI](/articles/rfi/1026880.md)
 
