--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-9 [滴滴事件触发北京收权，企业海外上市须经政府审批](/articles/voa/1039641.md)
+
 7-8 [日本第二批捐赠的AZ疫苗运抵台湾，台立法院长赞台日友情](/articles/voa/1039642.md)
 
 7-8 [北京打压滴滴殃及美国投资者](/articles/voa/1039643.md)
@@ -598,6 +600,4 @@
 6-24 [纽约州长宣布该州新冠疫情紧急状态于周四结束](/articles/voa/1039939.md)
 
 6-24 [美国太平洋西北地区面临危险热浪](/articles/voa/1039940.md)
-
-6-24 [密歇根共和党人驳回特朗普有关选举舞弊的指称](/articles/voa/1039941.md)
 
