--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-9 [全球新冠染疫死亡人数突破4百万，亚太面临变种病毒新挑战](/articles/voa/1039638.md)
+
 7-9 [美驻华使馆：赴美签证限制范围很小，但对保护国家安全非常必要](/articles/voa/1039639.md)
 
 7-9 [东京第4度进入疫情“紧急事态” 东京奥运全程受影响](/articles/voa/1039640.md)
@@ -598,6 +600,4 @@
 6-24 [一名参与国会大厦骚乱事件的男子认罪并同意配合调查](/articles/voa/1039936.md)
 
 6-24 [智库：欧盟需要有效对应中国等国的经济胁迫](/articles/voa/1039937.md)
-
-6-24 [美情报总监：新冠病毒来源可能永远不为人所知](/articles/voa/1039938.md)
 
