--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,14 @@
 美国之音
 ------
 
+7-9 [白宫发言人：含有中华民国旗帜的推文是“无心之失”，美仍致力于“一个中国”政策](/articles/voa/1039634.md)
+
+7-9 [香港民主派初选47人案再押后至9月23日提讯 市民质疑未审先囚](/articles/voa/1039635.md)
+
+7-9 [美国新冠病例和住院率再度升高](/articles/voa/1039636.md)
+
+7-9 [热带风暴“艾尔莎”给美国东南部带来强降雨](/articles/voa/1039637.md)
+
 7-9 [全球新冠染疫死亡人数突破4百万，亚太面临变种病毒新挑战](/articles/voa/1039638.md)
 
 7-9 [美驻华使馆：赴美签证限制范围很小，但对保护国家安全非常必要](/articles/voa/1039639.md)
@@ -592,12 +600,4 @@
 6-24 [布林肯警告世界各国不要从新疆的强迫劳动中受益](/articles/voa/1039932.md)
 
 6-24 [美国将被控侵犯人权的五家中国企业纳入出口管制实体清单](/articles/voa/1039933.md)
-
-6-24 [杀毒软件创始人迈克菲死在西班牙监狱](/articles/voa/1039934.md)
-
-6-24 [哈里斯副总统将访美-墨边境](/articles/voa/1039935.md)
-
-6-24 [一名参与国会大厦骚乱事件的男子认罪并同意配合调查](/articles/voa/1039936.md)
-
-6-24 [智库：欧盟需要有效对应中国等国的经济胁迫](/articles/voa/1039937.md)
 
