--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+7-9 [中国电影票房超过好莱坞，但电影形势非常困难 - 特别节目](/articles/rfi/1026578.md)
+
 7-9 [金正恩参拜锦绣山 李炳哲退后三排或被降职](/articles/rfi/1026579.md)
 
 7-9 [公象离群独自游荡 被麻醉遣送回乡](/articles/rfi/1026580.md)
@@ -598,6 +600,4 @@
 7-4 [菲律宾军方运输机坠机 已酿17死40伤 – 法国国际广播电台 - RFI](/articles/rfi/1026876.md)
 
 7-4 [8成州民已接种 佛蒙特州登全美疫苗覆盖率冠军 – 法国国际广播电台 - RFI](/articles/rfi/1026877.md)
-
-7-4 [密道顿强攻32分猎鹰 公鹿47年后闯NBA总冠军赛 – 法国国际广播电台 - RFI](/articles/rfi/1026878.md)
 
