--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+7-9 [海地继续搜捕刺杀总统的嫌疑人](/articles/voa/1039631.md)
+
+7-9 [加大游说力度，华为、海康威视雇佣前美国议员和官员](/articles/voa/1039632.md)
+
+7-9 [美国警告说，中国正考虑发展新型核武技术](/articles/voa/1039633.md)
+
 7-9 [白宫发言人：含有中华民国旗帜的推文是“无心之失”，美仍致力于“一个中国”政策](/articles/voa/1039634.md)
 
 7-9 [香港民主派初选47人案再押后至9月23日提讯 市民质疑未审先囚](/articles/voa/1039635.md)
@@ -594,10 +600,4 @@
 6-24 [香港居民难掩悲情抢购最后一期《苹果日报》](/articles/voa/1039929.md)
 
 6-24 [美众院将召开新冠溯源听证 聚焦武汉病毒所和中国解放军](/articles/voa/1039930.md)
-
-6-24 [拜登出台枪支暴力应对方案，提醒民众注意夏季杀戮高峰](/articles/voa/1039931.md)
-
-6-24 [布林肯警告世界各国不要从新疆的强迫劳动中受益](/articles/voa/1039932.md)
-
-6-24 [美国将被控侵犯人权的五家中国企业纳入出口管制实体清单](/articles/voa/1039933.md)
 
