--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+7-9 [布林肯国务卿就中国抓捕维权律师的“709镇压”六周年发表声明(全文翻译）](/articles/voa/1039627.md)
+
+7-9 [拜登宣布美国在阿富汗的军事使命将于8月31日结束](/articles/voa/1039628.md)
+
+7-9 [英议会委员会发表有关新疆问题报告，敦促政府支持政治抵制北京冬奥会](/articles/voa/1039629.md)
+
 7-9 [美国务院：美台将继续强劲的经贸交往](/articles/voa/1039630.md)
 
 7-9 [海地继续搜捕刺杀总统的嫌疑人](/articles/voa/1039631.md)
@@ -594,10 +600,4 @@
 6-24 [美官员坦言，美国不再视台湾为美中关系中的问题](/articles/voa/1039925.md)
 
 6-24 [原材料价格攀升 中国恐面临输入型通胀压力](/articles/voa/1039926.md)
-
-6-24 [问与答：金德芳谈中国误解美国的中国问题专家学者](/articles/voa/1039927.md)
-
-6-24 [米利：中国希望在今后六年内具备攻占台湾的军事能力](/articles/voa/1039928.md)
-
-6-24 [香港居民难掩悲情抢购最后一期《苹果日报》](/articles/voa/1039929.md)
 
