--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-9 [美两大股指决定移除更多的中国公司](/articles/voa/1039626.md)
+
 7-9 [布林肯国务卿就中国抓捕维权律师的“709镇压”六周年发表声明(全文翻译）](/articles/voa/1039627.md)
 
 7-9 [拜登宣布美国在阿富汗的军事使命将于8月31日结束](/articles/voa/1039628.md)
@@ -598,6 +600,4 @@
 6-24 [一百万份绝唱版苹果日报一抢而光 苹果文章被上传区块链永存](/articles/voa/1039924.md)
 
 6-24 [美官员坦言，美国不再视台湾为美中关系中的问题](/articles/voa/1039925.md)
-
-6-24 [原材料价格攀升 中国恐面临输入型通胀压力](/articles/voa/1039926.md)
 
