--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,12 @@
 纽约时报
 ------
 
+7-9 [当“战狼”主导中国的外交声音（下）：赵立坚代表了怎样的中国愿景](/articles/nyt/1046616.md)
+
+7-9 [下药、刀砍、肢解：伊朗年迈夫妇接连杀害子女震惊全国](/articles/nyt/1046617.md)
+
+7-9 [简报：东京奥运将空场举办大部分赛事；“拥抱”毛泽东的中国年轻人](/articles/nyt/1046618.md)
+
 7-8 [在美国的“躺平”和“躺不平”](/articles/nyt/1046619.md)
 
 7-8 [“谁是我们的敌人？”：那些“拥抱”毛泽东的中国年轻人](/articles/nyt/1046620.md)
@@ -594,10 +600,4 @@
 4-29 [马云的“倒下”和中国金融体系的未来](/articles/nyt/1046914.md)
 
 4-28 [纳瓦尔尼才是俄罗斯真正的领袖](/articles/nyt/1046915.md)
-
-4-28 [《无依之地》：那些居无定所的美国人](/articles/nyt/1046916.md)
-
-4-28 [中美之间必有一战吗？](/articles/nyt/1046917.md)
-
-4-28 [“这是谋杀”：印度疫情失控，疾病和死亡无处不在](/articles/nyt/1046918.md)
 
