--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+7-9 [暗杀海地总统嫌犯闯入台湾大使馆](/articles/dw/1041496.md)
+
 7-9 [欧洲议会吁官员抵制北京冬奥  中国批「把运动政治化」](/articles/dw/1041497.md)
 
 7-9 [香港区议员宣誓在即 港媒：恐有230人遭DQ](/articles/dw/1041498.md)
@@ -598,6 +600,4 @@
 6-22 [「媽媽，我不能呼吸了！」](/articles/dw/1041794.md)
 
 6-22 [美媒: 中国新冠入境限制还将持续至少一年](/articles/dw/1041795.md)
-
-6-22 [福奇再次改口称不认为新冠病毒来自实验室](/articles/dw/1041796.md)
 
