--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+7-9 [「709大抓捕」六周年 维权律师：生存之路被堵死](/articles/dw/1041493.md)
+
+7-9 [香港国安法首案  唐英杰三控罪表证成立](/articles/dw/1041494.md)
+
+7-9 [台湾「国旗」太敏感 华盛顿删帖澄清](/articles/dw/1041495.md)
+
 7-9 [暗杀海地总统嫌犯闯入台湾大使馆](/articles/dw/1041496.md)
 
 7-9 [欧洲议会吁官员抵制北京冬奥  中国批「把运动政治化」](/articles/dw/1041497.md)
@@ -594,10 +600,4 @@
 6-23 [中加联合国人权理事会交锋 互批种族问题](/articles/dw/1041791.md)
 
 6-22 [德语媒体：对华政策上，欧美难以取得共识](/articles/dw/1041792.md)
-
-6-22 [专家：联盟党告别默克尔的对华政策](/articles/dw/1041793.md)
-
-6-22 [「媽媽，我不能呼吸了！」](/articles/dw/1041794.md)
-
-6-22 [美媒: 中国新冠入境限制还将持续至少一年](/articles/dw/1041795.md)
 
