--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+7-9 [【CDT周报】第25期：所有人都是少数群体中的一员，你永远不知道谁是下一个受害者](/articles/cdt/380521.md)
+
 7-8 [【CDT推荐】本周推荐媒体：厌女文化抵制者、保护卫士（Safeguard Defenders）](/articles/cdt/380538.md)
 
 7-8 [【图说天朝】“所有人都是少数群体中的一员”](/articles/cdt/380539.md)
@@ -598,6 +600,4 @@
 5-31 [【CDTV】孙长老｜生育机器人](/articles/cdt/381963.md)
 
 5-31 [【图说天朝】三孩生育政策来了，微信朋友圈已成段子海洋](/articles/cdt/381987.md)
-
-5-31 [骚客文艺｜不会吧，白岩松老师](/articles/cdt/381988.md)
 
