--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+7-9 [布克31分猎公鹿 NBA总冠军赛太阳2连胜 – 法国国际广播电台 - RFI](/articles/rfi/1026554.md)
+
 7-9 [海地总统遇刺案　警方：28嫌含26哥伦比亚人2美籍 – 法国国际广播电台 - RFI](/articles/rfi/1026555.md)
 
 7-9 [巴西小型试验 疫苗仅1剂挡不住Gamma变种 – 法国国际广播电台 - RFI](/articles/rfi/1026556.md)
@@ -598,6 +600,4 @@
 7-5 [埃及总统塞西为海军新基地落成剪彩](/articles/rfi/1026852.md)
 
 7-5 [泰媒：中美比抗疫 中共创奇迹 - 曼谷专栏](/articles/rfi/1026853.md)
-
-7-5 [坦桑尼亚巴加莫约港建设项目谈判有望重启 - 聚焦非洲](/articles/rfi/1026854.md)
 
