--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,24 @@
 法广
 ------
 
+7-9 [宣誓前夕放风 指区议员自行辞职可免追薪 两日内逾七十人请辞](/articles/rfi/1026545.md)
+
+7-9 [乐施会 : 2020年全球饥饿人口猛增](/articles/rfi/1026546.md)
+
+7-9 [拜登延长针对香港制裁 港府表遗憾 中方扬言反制](/articles/rfi/1026547.md)
+
+7-9 [首见：未落成须先拆再重建 热卖楼王有结构问题 专家猜人为疏忽](/articles/rfi/1026548.md)
+
+7-9 [西班牙总理访立陶宛 记者会遭俄战机警报打断 – 法国国际广播电台 - RFI](/articles/rfi/1026549.md)
+
+7-9 [非洲经历疫情最严峻一周 世卫：更糟的在后头 – 法国国际广播电台 - RFI](/articles/rfi/1026550.md)
+
+7-9 [美佛州公寓高楼坍塌 增至64死76人失联 – 法国国际广播电台 - RFI](/articles/rfi/1026551.md)
+
+7-9 [乐施会：2020全球饥饿人口增逾6倍 COVID-19疫情使危机恶化 – 法国国际广播电台 - RFI](/articles/rfi/1026552.md)
+
+7-9 [日股收黑 – 法国国际广播电台 - RFI](/articles/rfi/1026553.md)
+
 7-9 [布克31分猎公鹿 NBA总冠军赛太阳2连胜 – 法国国际广播电台 - RFI](/articles/rfi/1026554.md)
 
 7-9 [海地总统遇刺案　警方：28嫌含26哥伦比亚人2美籍 – 法国国际广播电台 - RFI](/articles/rfi/1026555.md)
@@ -582,22 +600,4 @@
 7-5 [中国机构就对滴滴出行启动审查 禁新用户](/articles/rfi/1026843.md)
 
 7-5 [教宗方济各肠道不适  住院动手术](/articles/rfi/1026844.md)
-
-7-5 [美民众国庆报复性出游 专家：恐引Delta变种感染潮](/articles/rfi/1026845.md)
-
-7-5 [德州沃斯堡洗车店附近传枪响  8人受伤](/articles/rfi/1026846.md)
-
-7-5 [习近平“头破血流”毒咒：官方紧跟 民间热议 - 要闻分析](/articles/rfi/1026847.md)
-
-7-5 [尼日利亚约鲁巴人谋建国 示威遭驱散](/articles/rfi/1026848.md)
-
-7-5 [疫情打乱海运 货柜运价创新高 – 法国国际广播电台 - RFI](/articles/rfi/1026849.md)
-
-7-5 [菲律宾军用运输机坠毁增至45死 – 法国国际广播电台 - RFI](/articles/rfi/1026850.md)
-
-7-5 [热带风暴艾尔莎掠过海地  逼近古巴 – 法国国际广播电台 - RFI](/articles/rfi/1026851.md)
-
-7-5 [埃及总统塞西为海军新基地落成剪彩](/articles/rfi/1026852.md)
-
-7-5 [泰媒：中美比抗疫 中共创奇迹 - 曼谷专栏](/articles/rfi/1026853.md)
 
