--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+7-9 [清洁耳朵最好的办法：用耳勺](/articles/nyt/1046613.md)
+
 7-9 [“萌”化人心：巨型3D猫咪亮相日本街头](/articles/nyt/1046614.md)
 
 7-9 [腾讯启用人脸识别限制未成年玩家，引发隐私争议](/articles/nyt/1046615.md)
@@ -598,6 +600,4 @@
 4-29 [中国科技巨头的“狗咬狗”式竞争](/articles/nyt/1046911.md)
 
 4-29 [“对牛弹琴”？丹麦农舍为奶牛举办音乐会](/articles/nyt/1046912.md)
-
-4-29 [美国走向大政府时代？拜登上任百日推4万亿美元经济议程](/articles/nyt/1046913.md)
 
