--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+7-9 [中国六月工厂出厂价格增长略有放缓但价格仍然高企](/articles/voa/1039619.md)
+
+7-9 [“七一”后习近平再次发话 世界政党对话实为“国内消费”](/articles/voa/1039620.md)
+
+7-9 [美拟将更多在新疆有侵犯人权行为的中国公司列入经济黑名单](/articles/voa/1039621.md)
+
 7-9 [南中国海仲裁5年后，中国船只更频繁地出现在菲律宾周边](/articles/voa/1039622.md)
 
 7-9 [分析：滴滴之后 中企赴美上市将进入拐点](/articles/voa/1039623.md)
@@ -594,10 +600,4 @@
 6-25 [加拿大国会议员呼吁对香港官员在加金融资产进行审计](/articles/voa/1039917.md)
 
 6-25 [时事大家谈: 百年党庆加紧内控外宣，中共自信何在？](/articles/voa/1039918.md)
-
-6-25 [最新报告揭示中共加速和扩大在全球迫害新疆穆斯林](/articles/voa/1039919.md)
-
-6-25 [没信心与北京合作 俄出现声音质疑批评俄中关系](/articles/voa/1039920.md)
-
-6-25 [美国务院澄清，下周G20部长级会议未安排布林肯与王毅会晤](/articles/voa/1039921.md)
 
