--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,12 @@
 路透
 ------
 
+7-9 [独家：拜登将签署行政命令 严审银行业并购案以促进竞争](/articles/reuters/1035925.md)
+
+7-9 [即时观点：中国央行超预期全面降准 稳健基调不改对冲基础货币增长乏力](/articles/reuters/1035926.md)
+
+7-9 [中兴通讯预计上半年净利38-43亿上升1-1.3倍 报告期内转让子公司股权录得收益](/articles/reuters/1035927.md)
+
 7-9 [即时观点：中国6月金融数据均超预期 央行降准靴子落定仍强调稳字当头](/articles/reuters/1035928.md)
 
 7-9 [中国央行全面降准0.5个百分点降准释放长期资金约1万亿元 货币政策稳字当头](/articles/reuters/1035929.md)
@@ -594,10 +600,4 @@
 7-2 [IMF对全球税收协议表示欢迎 敦促未加入的国家加入进来](/articles/reuters/1036223.md)
 
 7-2 [马来西亚指定爱立信为合作伙伴 开发5G网络和生态系统](/articles/reuters/1036224.md)
-
-7-2 [投资者押注今年下半年美债收益率维持低迷或继续下行](/articles/reuters/1036225.md)
-
-7-2 [富时罗素将小鹏汽车纳入全球股票等三个指数 7月8日起生效](/articles/reuters/1036226.md)
-
-7-2 [独家：伊朗遭袭后一直限制联合国核查人员进入主要铀浓缩工厂--外交人士](/articles/reuters/1036227.md)
 
