--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-9 [“台湾有事，就是日美有事”，冲绳的战略作用日益凸显](/articles/voa/1039618.md)
+
 7-9 [中国六月工厂出厂价格增长略有放缓但价格仍然高企](/articles/voa/1039619.md)
 
 7-9 [“七一”后习近平再次发话 世界政党对话实为“国内消费”](/articles/voa/1039620.md)
@@ -598,6 +600,4 @@
 6-25 [拜登总统就香港苹果日报被迫停刊事件发表声明](/articles/voa/1039916.md)
 
 6-25 [加拿大国会议员呼吁对香港官员在加金融资产进行审计](/articles/voa/1039917.md)
-
-6-25 [时事大家谈: 百年党庆加紧内控外宣，中共自信何在？](/articles/voa/1039918.md)
 
