--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+7-9 [先生制造 | 当尘肺病侵入90后年轻人](/articles/cdt/380504.md)
+
 7-9 [八点健闻 | 我帮300位整形失败的姑娘维权](/articles/cdt/380506.md)
 
 7-9 [歪脑 | 这些千里之外的内地人，成为香港运动的一部分](/articles/cdt/380509.md)
@@ -598,6 +600,4 @@
 6-1 [德国之声 | 老友记重聚特辑：哪些画面在中国被删？](/articles/cdt/381954.md)
 
 6-1 [销美丽 | 肖美丽致信卫健委：加强男性吸烟人群防控，减少二手烟](/articles/cdt/381955.md)
-
-6-1 [圆月弯刀 | 三胎放开了，农村的横幅该隆重登场了！！！](/articles/cdt/381956.md)
 
