--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+7-9 [东奥禁观众入场 澳洲名将基尔乔斯决定退赛 – 法国国际广播电台 - RFI](/articles/rfi/1026527.md)
+
+7-9 [G20财长会聚焦支持跨国公司征税改革 - 要闻解说](/articles/rfi/1026528.md)
+
+7-9 [泰国疫情严峻 曼谷及周边地区实施类宵禁 – 法国国际广播电台 - RFI](/articles/rfi/1026529.md)
+
 7-9 [孟加拉食品厂大火至少52死 多名工人跳楼逃生 – 法国国际广播电台 - RFI](/articles/rfi/1026530.md)
 
 7-9 [阿富汗塔利班周五宣称已经控制阿富汗全国领土的85%](/articles/rfi/1026531.md)
@@ -594,10 +600,4 @@
 7-5 [港警拘2人涉网上煽暴 建制势力吁「杀」「无赦」却逍遥](/articles/rfi/1026825.md)
 
 7-5 [港台公民组织受压解散 台湾「香港边青」停fb运作](/articles/rfi/1026826.md)
-
-7-5 [疫情疑虑升高 日股收低 – 法国国际广播电台 - RFI](/articles/rfi/1026827.md)
-
-7-5 [热海市土石流 日本急搜生还者 – 法国国际广播电台 - RFI](/articles/rfi/1026828.md)
-
-7-5 [智利制宪会议代表就任 – 法国国际广播电台 - RFI](/articles/rfi/1026829.md)
 
