--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+7-9 [“滴滴“事件延烧: Keep、喜马拉雅等取消赴美上市](/articles/dw/1041483.md)
+
+7-9 [图片回顾中共建政70年之六：开放与管控](/articles/dw/1041484.md)
+
 7-9 [孟加拉一食品加工厂发生大火  伤亡惨重](/articles/dw/1041485.md)
 
 7-9 [德国共产党和无政府主义者无缘今年联邦大选](/articles/dw/1041486.md)
@@ -596,8 +600,4 @@
 6-23 [旅日大熊貓「真真」誕下雙胞胎](/articles/dw/1041781.md)
 
 6-23 [澳大利亚前驻华大使：北京缺乏安全感](/articles/dw/1041782.md)
-
-6-23 [尼桑前总裁戈恩一怒中断DW采访](/articles/dw/1041783.md)
-
-6-23 [默克尔第二针接种莫德纳 组合疫苗更好？](/articles/dw/1041784.md)
 
