--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+7-9 [难了，巴基斯坦是塔利班大后方](/articles/rfi/1026522.md)
+
 7-9 [热带风暴艾尔莎将来袭 纽约降豪雨多处淹水 – 法国国际广播电台 - RFI](/articles/rfi/1026523.md)
 
 7-9 [越南疫情压不下来 胡志明市展开封城两周 – 法国国际广播电台 - RFI](/articles/rfi/1026524.md)
@@ -598,6 +600,4 @@
 7-5 [台湾疫情再缓降 今报28本土与1人病逝例](/articles/rfi/1026820.md)
 
 7-5 [拜登国庆未大庆 促民众接种疫苗以彻底结束疫情](/articles/rfi/1026821.md)
-
-7-5 [像极了饥饿游戏 澳官员：民众抢疫苗如电影情节 – 法国国际广播电台 - RFI](/articles/rfi/1026822.md)
 
