--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+7-9 [“鹘鹰”外销改内用？中国战机出口低迷揭示软实力短板](/articles/voa/1039613.md)
+
+7-9 [感激袭警者牺牲引当局强烈反弹 港大学生干事会道歉请辞](/articles/voa/1039614.md)
+
 7-9 [美军撤离阿富汗之时 中国从阿富汗紧急撤侨](/articles/voa/1039615.md)
 
 7-9 [芯片短缺导致中国6月汽车销售锐减，行业预期：下半年不确定性太多](/articles/voa/1039616.md)
@@ -596,8 +600,4 @@
 6-25 [迈阿密附近一座海滨大楼倒塌 至少一人死亡 99人下落不明](/articles/voa/1039911.md)
 
 6-25 [开火示警并投放炸弹？俄罗斯与英国就黑海相遇事件相互指责](/articles/voa/1039912.md)
-
-6-25 [美国加速推进转移帮助过美军的成千上万阿富汗人的计划](/articles/voa/1039913.md)
-
-6-25 [纽约法庭暂停朱利安尼律师执照](/articles/voa/1039914.md)
 
