--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,14 @@
 自由亚洲电台
 ------
 
+7-10 [台湾学者揭露中共“趁疫谋统”推销极权](/articles/rfa/1045106.md)
+
+7-9 [中国多地促学区房价降温   中介违规遭刑拘](/articles/rfa/1045107.md)
+
+7-9 [香港“后国安时代” ：学界举报成风   师生皆成整肃对象](/articles/rfa/1045108.md)
+
+7-9 [中国机械设备出口超过德国  距“既大且强”仍有距离](/articles/rfa/1045109.md)
+
 7-9 [涉刺杀海地总统11嫌疑人闯入台湾大使馆被抓](/articles/rfa/1045110.md)
 
 7-9 [【709六周年】高墙外的太太们  不懈为夫发声](/articles/rfa/1045111.md)
@@ -592,12 +600,4 @@
 6-4 [异议人士东京大阪开车巡游  悼念六四声援香港](/articles/rfa/1045404.md)
 
 6-4 [塞班岛烛光晚会悼六四   八九民运参与者忆当年](/articles/rfa/1045405.md)
-
-6-4 [疫苗外交后  中国大搞“疫苗统战”](/articles/rfa/1045406.md)
-
-6-4 [美日及时伸援手捐赠台湾疫苗 日AZ124万剂抵台](/articles/rfa/1045407.md)
-
-6-4 [香港支联会副主席邹幸彤六四清晨被捕](/articles/rfa/1045408.md)
-
-6-4 [天安门母亲万安公墓祭亲人 “抗争到底，至死不渝！”](/articles/rfa/1045409.md)
 
