--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+7-10 [泰国面对新波Covid疫情 卫生体系艰苦](/articles/rfi/1026520.md)
+
+7-9 [孟加拉食品厂火灾罹难者增至52人](/articles/rfi/1026521.md)
+
 7-9 [难了，巴基斯坦是塔利班大后方](/articles/rfi/1026522.md)
 
 7-9 [热带风暴艾尔莎将来袭 纽约降豪雨多处淹水 – 法国国际广播电台 - RFI](/articles/rfi/1026523.md)
@@ -596,8 +600,4 @@
 7-5 [滴滴案闹大 官媒指7.1敏感日子前上市美国先斩后奏高层震怒再震怒](/articles/rfi/1026818.md)
 
 7-5 [美大胃王10分钟吞76个热狗面包 14度夺冠 – 法国国际广播电台 - RFI](/articles/rfi/1026819.md)
-
-7-5 [台湾疫情再缓降 今报28本土与1人病逝例](/articles/rfi/1026820.md)
-
-7-5 [拜登国庆未大庆 促民众接种疫苗以彻底结束疫情](/articles/rfi/1026821.md)
 
