--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+7-10 [中国国家副主席王岐山呼吁中美对话协商，避免误导误判](/articles/voa/1039611.md)
+
+7-10 [新疆的事情还没完，又有14家中国公司被美国列入实体清单](/articles/voa/1039612.md)
+
 7-9 [“鹘鹰”外销改内用？中国战机出口低迷揭示软实力短板](/articles/voa/1039613.md)
 
 7-9 [感激袭警者牺牲引当局强烈反弹 港大学生干事会道歉请辞](/articles/voa/1039614.md)
@@ -596,8 +600,4 @@
 6-25 [默克尔接班人主张不对中国叫板，但多方压力不许他左右逢源](/articles/voa/1039909.md)
 
 6-25 [日本对中国军事意图严重担忧](/articles/voa/1039910.md)
-
-6-25 [迈阿密附近一座海滨大楼倒塌 至少一人死亡 99人下落不明](/articles/voa/1039911.md)
-
-6-25 [开火示警并投放炸弹？俄罗斯与英国就黑海相遇事件相互指责](/articles/voa/1039912.md)
 
