--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+7-10 [【404档案馆】CDT播客第11期：航天投资公司党委书记张陶“殴打院士”事件](/articles/cdt/380503.md)
+
 7-9 [先生制造 | 当尘肺病侵入90后年轻人](/articles/cdt/380504.md)
 
 7-9 [八点健闻 | 我帮300位整形失败的姑娘维权](/articles/cdt/380506.md)
@@ -598,6 +600,4 @@
 6-1 [自由亚洲 | 六四异议人士将被旅游 天安门母亲求真相决心未变](/articles/cdt/381953.md)
 
 6-1 [德国之声 | 老友记重聚特辑：哪些画面在中国被删？](/articles/cdt/381954.md)
-
-6-1 [销美丽 | 肖美丽致信卫健委：加强男性吸烟人群防控，减少二手烟](/articles/cdt/381955.md)
 
