--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-10 [拜登签署行政命令 推动美国经济各领域的竞争](/articles/voa/1039602.md)
+
 7-10 [美国停止拘留怀孕无证移民](/articles/voa/1039603.md)
 
 7-10 [拜登与普京通电话讨论来自俄罗斯的勒索软件袭击](/articles/voa/1039604.md)
@@ -598,6 +600,4 @@
 6-25 [研究认为首宗COVID-19病例或早于官方说法](/articles/voa/1039900.md)
 
 6-25 [美参院外委会通过法案 禁止新疆强制劳动制品](/articles/voa/1039901.md)
-
-6-25 [对抗北京打压 美议员力推为香港苹果日报员工颁国会金奖](/articles/voa/1039902.md)
 
