--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+7-10 [阿维尼翁戏剧节现任总监专访:希望永存](/articles/rfi/1026503.md)
+
 7-10 [基辛格访华50周年 王岐山语出惊人](/articles/rfi/1026504.md)
 
 7-10 [北京追杀滴滴 旗下25款应用勒令下架](/articles/rfi/1026505.md)
@@ -598,6 +600,4 @@
 7-5 [习近平今与马克龙默克尔视频上聚会](/articles/rfi/1026801.md)
 
 7-5 [德国人口多样化话你知](/articles/rfi/1026802.md)
-
-7-5 [全球半导体晶片短缺 法国工业生产下降 – 法国国际广播电台 - RFI](/articles/rfi/1026803.md)
 
