--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+7-10 [FDA要求本局批准一款治疗阿尔茨海默症新药过程中是否可能违规展开调查](/articles/voa/1039598.md)
+
+7-10 [美国向印度尼西亚运送新冠疫苗](/articles/voa/1039599.md)
+
 7-10 [让人瞠目：新奥尔良机场查获六千根来自中国的假睫毛](/articles/voa/1039600.md)
 
 7-10 [欧洲议会通过决议呼吁外交抵制北京冬奥会 北京称不值得关注](/articles/voa/1039601.md)
@@ -596,8 +600,4 @@
 6-25 [中共党庆前重大事故防不胜防，河南武术馆火灾酿18死](/articles/voa/1039896.md)
 
 6-25 [香港政府高层改组 保安系统官员掌重权](/articles/voa/1039897.md)
-
-6-25 [国安法一周年前夕 在台港青：曾有那么一刹那 让我怀念起香港](/articles/voa/1039898.md)
-
-6-25 [美参议员呼吁拜登就《苹果日报》停刊实施制裁](/articles/voa/1039899.md)
 
