--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,38 @@
 路透
 ------
 
+7-12 [美国财长叶伦称要到2022年才可能开始转向对跨国公司征税的新机制](/articles/reuters/1035889.md)
+
+7-12 [中国锂电巨头亿纬锂能计划设立合资公司建设锂化工项目](/articles/reuters/1035890.md)
+
+7-12 [TikTok将采用自动操作删除违规视频](/articles/reuters/1035891.md)
+
+7-12 [通用汽车称在华合资公司第二季汽车交付量增长5.2%至逾75万辆](/articles/reuters/1035892.md)
+
+7-12 [20国集团警告称变种新冠病毒会恐对经济复苏构成威胁](/articles/reuters/1035893.md)
+
+7-12 [美国将多家中国实体列入出口管制“实体清单” 中国商务部称坚决反对](/articles/reuters/1035894.md)
+
+7-12 [朝鲜与中国友好合作互助条约签订60年之际 双方承诺加强合作--朝中社](/articles/reuters/1035895.md)
+
+7-12 [亿万富翁布兰森乘坐旗下维珍银河公司的火箭飞机翱翔太空](/articles/reuters/1035896.md)
+
+7-12 [焦点：G20警告新冠病毒变种威胁全球复苏 并就公司税达成协议](/articles/reuters/1035897.md)
+
+7-12 [焦点：中国6月金融数据超预期但存隐忧 全面降准落地之快出人意料](/articles/reuters/1035898.md)
+
+7-12 [图表新闻：2021上半年中国公司债违约创历史新高](/articles/reuters/1035899.md)
+
+7-12 [泰国卫生部称尽管接种了科兴生物疫苗 泰国仍有数百名医务人员感染新冠](/articles/reuters/1035900.md)
+
+7-12 [路透测算的人民币中间价料略升至6.4739元附近 因上日美指承压](/articles/reuters/1035901.md)
+
+7-12 [中国网络安全审查办法“升级” 掌握超100万用户信息的运营者赴国外上市须审查](/articles/reuters/1035902.md)
+
+7-12 [中国紫光集团称债权人申请对其进行破产重整 将配合法院进行司法审查](/articles/reuters/1035903.md)
+
+7-12 [中国市监总局叫停虎牙与斗鱼合并 腾讯回应称积极配合监管要求](/articles/reuters/1035904.md)
+
 7-10 [G20财长支持设定全球企业最低税率 阻止跨国公司转移利润--公告草案](/articles/reuters/1035905.md)
 
 7-10 [独家：IMF冀G20尽快决定向较贫穷国家转赠约千亿美元SDR--第一副总裁](/articles/reuters/1035906.md)
@@ -568,36 +600,4 @@
 7-2 [英飞凌CEO：芯片供应状况“仍然艰难”](/articles/reuters/1036187.md)
 
 7-2 [中国央行在流动性管控上依然游刃有余，市场不用过多猜测--OCBC](/articles/reuters/1036188.md)
-
-7-2 [美指强势人民币收创逾两个月新低 非农向好预期升温且待数据公布](/articles/reuters/1036189.md)
-
-7-2 [中国市监总局：为排挤对手或独占市场以低于成本价倾销的可处违法所得五倍以下罚款](/articles/reuters/1036190.md)
-
-7-2 [OPEC+寻求石油政策共识 阿联酋希望提高其减产基准-消息人士](/articles/reuters/1036191.md)
-
-7-2 [经济增长担忧打击沪综指收跌2% 单日跌幅创四个月最大](/articles/reuters/1036192.md)
-
-7-2 [特斯拉一辆顶配Model S Plaid在车主驾驶时起火--律师](/articles/reuters/1036193.md)
-
-7-2 [美军撤离阿富汗的主要空军基地--官员](/articles/reuters/1036194.md)
-
-7-2 [汇市一周综述：Delta变体搭美国非农前奏 给美元带来“涨”声一片](/articles/reuters/1036195.md)
-
-7-2 [《焦点》高通新任CEO宏愿：拿下笔记本电脑市场主导地位](/articles/reuters/1036196.md)
-
-7-2 [韩国总统文在寅5月会晤拜登前 曾与金正恩通信讨论峰会可能--报载](/articles/reuters/1036197.md)
-
-7-2 [委内瑞拉6月份通过马来西亚转运的石油出口量上升--数据](/articles/reuters/1036198.md)
-
-7-2 [综述：美国6月非农就业增速可能加快 因企业提高待遇吸引工人](/articles/reuters/1036199.md)
-
-7-2 [分析：过往危机的幽灵困扰着决策官员和金融市场](/articles/reuters/1036200.md)
-
-7-2 [中国重要财经新闻一周回顾](/articles/reuters/1036201.md)
-
-7-2 [苹果和英特尔将率先采用台积电最新的芯片生产技术--日经](/articles/reuters/1036202.md)
-
-7-2 [调查：加元未来一年料走强 但要突破1.20仍很难](/articles/reuters/1036203.md)
-
-7-2 [中国股市下滑但地区周边市场持坚 等候美非农就业报告](/articles/reuters/1036204.md)
 
