--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,12 @@
 路透
 ------
 
+7-12 [一周展望：经济反弹势头减弱之际 投资者期待美国第二季财报季](/articles/reuters/1035886.md)
+
+7-12 [图表新闻：全球债券基金资金流入规模创三个多月最大--理柏数据](/articles/reuters/1035887.md)
+
+7-12 [广汽埃安与华为将联合开发中大型智能纯电SUV 总投资近8亿计划2023年量产](/articles/reuters/1035888.md)
+
 7-12 [美国财长叶伦称要到2022年才可能开始转向对跨国公司征税的新机制](/articles/reuters/1035889.md)
 
 7-12 [中国锂电巨头亿纬锂能计划设立合资公司建设锂化工项目](/articles/reuters/1035890.md)
@@ -594,10 +600,4 @@
 7-3 [美联储戴利称就业可能在明年年底前恢复到危机前水平](/articles/reuters/1036184.md)
 
 7-3 [香港交易所推出小鹏汽车股票期货期权 暂定正股上市同日开始交易](/articles/reuters/1036185.md)
-
-7-2 [蚂蚁集团支持的Kakao Pay拟下月在韩国IPO 预计最多集资14亿美元](/articles/reuters/1036186.md)
-
-7-2 [英飞凌CEO：芯片供应状况“仍然艰难”](/articles/reuters/1036187.md)
-
-7-2 [中国央行在流动性管控上依然游刃有余，市场不用过多猜测--OCBC](/articles/reuters/1036188.md)
 
