--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+7-12 [海地总统暗杀案新剧情？暗杀案主谋欲取代总统](/articles/rfi/1026393.md)
+
+7-12 [NBA字母哥总冠军赛连两场破40分 季后赛史上第6位 – 法国国际广播电台 - RFI](/articles/rfi/1026394.md)
+
 7-12 [受到华尔街激励 亚股反弹收高 – 法国国际广播电台 - RFI](/articles/rfi/1026395.md)
 
 7-12 [阿富汗局势突变 塔利班领地已接壤中国 已向北京示善意](/articles/rfi/1026396.md)
@@ -596,8 +600,4 @@
 7-7 [中共百年党庆后华盛顿邮报发表社论指中共对民主世界与人类自由威胁日增](/articles/rfi/1026691.md)
 
 7-7 [嘎纳国际电影节   文化部长在红毯上又惊又喜](/articles/rfi/1026692.md)
-
-7-7 [美国防部终止微软和亚马逊争夺的100亿美元JEDI云计算合同](/articles/rfi/1026693.md)
-
-7-7 [世卫秘书长谭德塞考虑访日 协助东奥做好防疫](/articles/rfi/1026694.md)
 
