--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-13 [美国公布报告 点名批评中国等六个国家的种族灭绝和暴行](/articles/voa/1039546.md)
+
 7-13 [美国会议员要求增列中国芯片制造商对其进行出口管制](/articles/voa/1039547.md)
 
 7-13 [拜登呼吁海地政治领袖们为了国家利益“团结起来”](/articles/voa/1039548.md)
@@ -598,6 +600,4 @@
 6-29 [时事大家谈: “别让他跑了！” 潘石屹能平安撤离吗？](/articles/voa/1039844.md)
 
 6-29 [印尼六月至少十位接种过科兴疫苗的医生死于新冠感染 中国疫苗有效性再受质疑](/articles/voa/1039845.md)
-
-6-29 [随着疫苗陆续抵达，台湾单日本土新冠病例减至三级警戒以来新低](/articles/voa/1039846.md)
 
