--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+7-13 [中国6月份进出口强劲　下半年贸易可能放缓](/articles/dw/1041432.md)
+
+7-13 [日本防卫白皮书：首度提台湾稳定重要性](/articles/dw/1041433.md)
+
 7-13 [世卫：现阶段不需接种加强针  呼吁富国捐疫苗](/articles/dw/1041434.md)
 
 7-13 [中国又传公安意外 苏州酒店辅房坍塌](/articles/dw/1041435.md)
@@ -596,8 +600,4 @@
 6-26 [谁是德国的 “新右翼“？](/articles/dw/1041730.md)
 
 6-26 [德国前外长：孤立中国的想法荒谬](/articles/dw/1041731.md)
-
-6-26 [深度解读：为什么澳洲和中国为了大堡礁起争执？](/articles/dw/1041732.md)
-
-6-26 [中国年轻人为什么要入党？](/articles/dw/1041733.md)
 
