--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+7-14 [塔利班势力持续扩张 专家分析对中国利弊](/articles/dw/1041412.md)
+
 7-14 [苏州事故搜救结束 塌楼粉碎原因待查](/articles/dw/1041413.md)
 
 7-14 [美财长推「美欧统一战线」抗中俄 北京坚决反对](/articles/dw/1041414.md)
@@ -598,6 +600,4 @@
 6-27 [“战狼外交”与“讲好中国故事”](/articles/dw/1041710.md)
 
 6-27 [澳中关系：民众对中国看法恶化 学者呼吁学习新加坡](/articles/dw/1041711.md)
-
-6-27 [离任半年后，特朗普首次出席大型集会](/articles/dw/1041712.md)
 
