--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+7-14 [哀悼刺客争议发酵 香港学生会被「割席」](/articles/dw/1041410.md)
+
+7-14 [瑟德维尔：忠实的牧羊人](/articles/dw/1041411.md)
+
 7-14 [塔利班势力持续扩张 专家分析对中国利弊](/articles/dw/1041412.md)
 
 7-14 [苏州事故搜救结束 塌楼粉碎原因待查](/articles/dw/1041413.md)
@@ -596,8 +600,4 @@
 6-27 [维尔茨堡持刀杀人案：犯罪动机依然不明](/articles/dw/1041708.md)
 
 6-27 [媒体： 特斯拉拟在中国发起召回行动](/articles/dw/1041709.md)
-
-6-27 [“战狼外交”与“讲好中国故事”](/articles/dw/1041710.md)
-
-6-27 [澳中关系：民众对中国看法恶化 学者呼吁学习新加坡](/articles/dw/1041711.md)
 
