--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,14 @@
 法广
 ------
 
+7-15 [古巴当局试图安抚怒怨四起的民众](/articles/rfi/1026174.md)
+
+7-15 [阿里巴巴和腾讯在反垄断压力下考虑向对方逐步开放服务](/articles/rfi/1026175.md)
+
+7-15 [全球确诊逾1亿8834万例  超过406万人病殁 – 法国国际广播电台 - RFI](/articles/rfi/1026176.md)
+
+7-15 [熊熊野火肆虐美加西部  高温与干旱加剧火势 – 法国国际广播电台 - RFI](/articles/rfi/1026177.md)
+
 7-15 [中国数据稳健加上美联准会温和评论 亚股多收高 – 法国国际广播电台 - RFI](/articles/rfi/1026178.md)
 
 7-15 [中国准备“挤进”阿富汗 但或需“搞定”塔利班](/articles/rfi/1026179.md)
@@ -592,12 +600,4 @@
 7-11 [21国声援香港苹果日报 担忧新法打压媒体](/articles/rfi/1026472.md)
 
 7-11 [美国:共和党极端保守派聚集达拉斯](/articles/rfi/1026473.md)
-
-7-11 [马达加斯加准备应对Delta变种威胁](/articles/rfi/1026474.md)
-
-7-11 [美国和哥伦比亚向海地派员调查 华盛顿拒绝出兵](/articles/rfi/1026475.md)
-
-7-11 [法国国防部长访美：我们是你们最好的盟友 - 要闻解说](/articles/rfi/1026476.md)
-
-7-10 [海地要求联合国派兵保护战略要地](/articles/rfi/1026477.md)
 
