--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+7-15 [四川异议人士谢俊彪遭批捕  陈云飞案移送检察院起诉](/articles/rfa/1045058.md)
+
 7-15 [美军机再次快闪抵台 中国国防部称“未经准许进入领空”](/articles/rfa/1045059.md)
 
 7-15 [四川大学生军训期间相互“告密”成风](/articles/rfa/1045060.md)
@@ -598,6 +600,4 @@
 6-10 [曾支持香港警察  “本升专”抗议学生被揍醒了吗？](/articles/rfa/1045356.md)
 
 6-10 [拜登将在G7和北约峰会谈论病毒溯源](/articles/rfa/1045357.md)
-
-6-10 [南京大学低俗招生广告引物化女性的批评](/articles/rfa/1045358.md)
 
