--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+7-19 [东京奥运：南非足球员於选手村确诊](/articles/dw/1041331.md)
+
+7-19 [中国与东盟媒体扩大合作  学者：恐藏隐忧](/articles/dw/1041332.md)
+
 7-19 [港人BNO赴英特许入境期限将至 香港机场现人潮](/articles/dw/1041333.md)
 
 7-18 [UNESCO：建议将大堡礁划归“濒危”是“行动呼吁”](/articles/dw/1041334.md)
@@ -596,8 +600,4 @@
 7-1 [斯洛文尼亚接任欧盟轮值主席国](/articles/dw/1041629.md)
 
 7-1 [美媒：特朗普房地产集团遭起诉](/articles/dw/1041630.md)
-
-7-1 [俄荷舰机 黑海过招](/articles/dw/1041631.md)
-
-7-1 [俄荷舰机 黑海过招](/articles/dw/1041632.md)
 
