--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+7-19 [巴基斯坦重大车祸 至少28死40伤 – 法国国际广播电台 - RFI](/articles/rfi/1025979.md)
+
 7-19 [阿尔勒的卢玛基金会艺术中心 - 法国文艺欣赏](/articles/rfi/1025980.md)
 
 7-19 [台湾国产疫苗通过EUA 疫情稳定26日后有望降级](/articles/rfi/1025981.md)
@@ -598,6 +600,4 @@
 7-14 [美警告海地古巴人 勿因政局动荡试图逃亡美国 – 法国国际广播电台 - RFI](/articles/rfi/1026277.md)
 
 7-14 [那嘉佐影片《街娃儿》：透视社会巨变之下个体的迷失](/articles/rfi/1026278.md)
-
-7-14 [美国6月通膨年增率逾5% 创2008年来最大幅度 – 法国国际广播电台 - RFI](/articles/rfi/1026279.md)
 
