--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,18 @@
 法广
 ------
 
+7-19 [东京奥运前4天：“气泡”防疫法被指在机场和宾馆出漏洞](/articles/rfi/1025973.md)
+
+7-19 [澳洲报告：大堡礁复原中 但前景黯淡 – 法国国际广播电台 - RFI](/articles/rfi/1025974.md)
+
+7-19 [通膨和疫情疑虑再起 亚股随美股重挫收跌 – 法国国际广播电台 - RFI](/articles/rfi/1025975.md)
+
+7-19 [法国义肢制造商 卖出首颗人造心脏 – 法国国际广播电台 - RFI](/articles/rfi/1025976.md)
+
+7-19 [法国明年起 禁蛋鸡场屠宰小公鸡 – 法国国际广播电台 - RFI](/articles/rfi/1025977.md)
+
+7-19 [变种病毒威胁下 英格兰今迎“自由日”与刺激贸易新计划 - 要闻解说](/articles/rfi/1025978.md)
+
 7-19 [巴基斯坦重大车祸 至少28死40伤 – 法国国际广播电台 - RFI](/articles/rfi/1025979.md)
 
 7-19 [阿尔勒的卢玛基金会艺术中心 - 法国文艺欣赏](/articles/rfi/1025980.md)
@@ -588,16 +600,4 @@
 7-14 [巴基斯坦巴士爆炸酿13死 9名中国公民丧命 – 法国国际广播电台 - RFI](/articles/rfi/1026271.md)
 
 7-14 [法国国庆节 马克龙最后一次阅兵？](/articles/rfi/1026272.md)
-
-7-14 [美国指香港法治风险日益受关注 英媒指拜登将对港首发营运风险忠告](/articles/rfi/1026273.md)
-
-7-14 [日股收跌 市场静待Fed主席国会演说 – 法国国际广播电台 - RFI](/articles/rfi/1026274.md)
-
-7-14 [澳洲雪梨疫情蔓延 半封城令延长两周 – 法国国际广播电台 - RFI](/articles/rfi/1026275.md)
-
-7-14 [密谋绑架记者 4伊朗人遭美起诉 – 法国国际广播电台 - RFI](/articles/rfi/1026276.md)
-
-7-14 [美警告海地古巴人 勿因政局动荡试图逃亡美国 – 法国国际广播电台 - RFI](/articles/rfi/1026277.md)
-
-7-14 [那嘉佐影片《街娃儿》：透视社会巨变之下个体的迷失](/articles/rfi/1026278.md)
 
