--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+7-20 [八旬老奶奶飞向太空 续写传奇](/articles/dw/1041310.md)
+
+7-20 [中国男星吴亦凡遭控诱姦少女 「女生帮助女生」成网路热搜](/articles/dw/1041311.md)
+
 7-20 [海地临时总理同意下台  政权将移交总统生前指定人选](/articles/dw/1041312.md)
 
 7-20 [台湾宣布於立陶宛设办事处 专家：增进多方合作](/articles/dw/1041313.md)
@@ -596,8 +600,4 @@
 7-2 [关岛放松入境管制 台湾人争相前往接种疫苗](/articles/dw/1041608.md)
 
 7-2 [德国11种夏季最流行食品](/articles/dw/1041609.md)
-
-7-2 [印度新冠死者超过40万](/articles/dw/1041610.md)
-
-7-2 [从连战丶洪秀柱贺中共百年看国民党困境](/articles/dw/1041611.md)
 
