--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-21 [塔什干会议吸引国际社会对中亚事务的关注](/articles/voa/1039372.md)
+
 7-21 [分析人士：夹在美中间的亚洲国家囤积新型导弹，地区正滑向军备竞赛](/articles/voa/1039373.md)
 
 7-21 [东京奥运负责人拒绝排除取消奥运会的可能](/articles/voa/1039374.md)
@@ -598,6 +600,4 @@
 7-7 [微信删除中国大学生LGBT账号 引发打压同性恋文化的担忧](/articles/voa/1039670.md)
 
 7-7 [日美加强专项军演联手应对台海危机？五角大楼：联演不针对任何具体威胁](/articles/voa/1039671.md)
-
-7-7 [台湾前副总统陈建仁：国际疫苗捐助是对民主自由的台湾的鼓励](/articles/voa/1039672.md)
 
