--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,14 @@
 美国之音
 ------
 
+7-21 [调查报告：疫情和罚款都压不住中国医院里的贿赂](/articles/voa/1039368.md)
+
+7-21 [美国政治两极分裂，第三党真能成为黑马突出重围吗？](/articles/voa/1039369.md)
+
+7-21 [美新冠疫情升温 白宫、国会接连传出确诊](/articles/voa/1039370.md)
+
+7-21 [德尔塔变体病毒占美国新增新冠病例的83%](/articles/voa/1039371.md)
+
 7-21 [塔什干会议吸引国际社会对中亚事务的关注](/articles/voa/1039372.md)
 
 7-21 [分析人士：夹在美中间的亚洲国家囤积新型导弹，地区正滑向军备竞赛](/articles/voa/1039373.md)
@@ -592,12 +600,4 @@
 7-8 [云南省中缅边境城市瑞丽面临第四波疫情冲击](/articles/voa/1039666.md)
 
 7-7 [澳中较量 中国落败，堪培拉对北京立场更趋强硬](/articles/voa/1039667.md)
-
-7-7 [海地总统遇刺身亡，美国称袭击为“令人发指的罪行”](/articles/voa/1039668.md)
-
-7-7 [滴滴厄运冲击面扩大，中国监管部门多路出击堵住境外上市漏洞](/articles/voa/1039669.md)
-
-7-7 [微信删除中国大学生LGBT账号 引发打压同性恋文化的担忧](/articles/voa/1039670.md)
-
-7-7 [日美加强专项军演联手应对台海危机？五角大楼：联演不针对任何具体威胁](/articles/voa/1039671.md)
 
