--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+7-21 [简报：郑州暴雨已致12人死亡；吴亦凡被指“诱奸”少女引发公愤](/articles/nyt/1046562.md)
+
 7-20 [光州阴谋论、“历史扭曲”和韩国言论自由之争](/articles/nyt/1046563.md)
 
 7-20 [环保还是“反性爱”？东京奥运村纸板床引热议](/articles/nyt/1046564.md)
@@ -598,6 +600,4 @@
 5-17 [汉堡快“灭绝”了吗？](/articles/nyt/1046860.md)
 
 5-17 [关于“天问一号”火星着陆：你需要了解的五个问题](/articles/nyt/1046861.md)
-
-5-14 [盖茨夫妇离婚案：巨额财富怎么分？](/articles/nyt/1046862.md)
 
