--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,32 @@
 路透
 ------
 
+7-21 [河南郑州罕见持续强降雨已造成12人死亡 习近平要求抓紧防汛救灾措施](/articles/reuters/1035498.md)
+
+7-21 [高盛下调第三季布兰特油价预估至75美元/桶 因Delta变种肆虐打击需求](/articles/reuters/1035499.md)
+
+7-21 [必和必拓考虑退出石油及天然气业务 加快撤出化石燃料行业--彭博](/articles/reuters/1035500.md)
+
+7-21 [英国内阁大臣已暂停给NWF拨款 此前该公司被中资的安世半导体收购--报章](/articles/reuters/1035501.md)
+
+7-21 [特斯拉计划今年晚些时候向其他电动汽车开放其充电网络](/articles/reuters/1035502.md)
+
+7-21 [美国80%以上新增新冠病例是Delta变体引起 疫苗对预防重症仍很有效--福奇](/articles/reuters/1035503.md)
+
+7-21 [独家：行业利益难摆平 美国今年的生物燃料政策又要推迟--消息](/articles/reuters/1035504.md)
+
+7-21 [东京2020奥组委总监不排除在最后一刻取消奥运会的可能性](/articles/reuters/1035505.md)
+
+7-21 [“最好的一天” 全球首富贝佐斯完成太空之旅](/articles/reuters/1035506.md)
+
+7-21 [美国一些州提前结束联邦失业救济 但就业人数并未明显增长](/articles/reuters/1035507.md)
+
+7-21 [中国人民币债券市场每年可望吸引4,000亿美元外资流入--IIF](/articles/reuters/1035508.md)
+
+7-21 [调查：澳洲经济复苏面临威胁 疫苗接种缓慢是首要风险](/articles/reuters/1035509.md)
+
+7-21 [焦点：IMF第一副总裁呼吁各国将政策从经济援助转向改革 以提振复苏前景](/articles/reuters/1035510.md)
+
 7-21 [路透测算的人民币中间价料开在6.4816元附近 较上日升39点](/articles/reuters/1035511.md)
 
 7-21 [中国长城汽车上半年净利同比增逾2倍 董事长此前称2025年目标销量400万辆](/articles/reuters/1035512.md)
@@ -574,30 +600,4 @@
 7-14 [美国指称香港法治遭到破坏 继续认定港府负有责任](/articles/reuters/1035796.md)
 
 7-14 [惠誉确认美国主权债信评等为“AAA“ 维持“负面”展望不变](/articles/reuters/1035797.md)
-
-7-14 [中国顺丰控股预计上半年净利缩水约八成 一季度意外巨亏近10亿元](/articles/reuters/1035798.md)
-
-7-14 [路透测算的人民币中间价料贬至6.4797元附近 隔夜美指大涨](/articles/reuters/1035799.md)
-
-7-13 [李克强称坚持不搞大水漫灌 加强区间调控做好跨周期调节](/articles/reuters/1035800.md)
-
-7-13 [投资者回归科技股 舍弃再通胀交易--美国银行调查](/articles/reuters/1035801.md)
-
-7-13 [中国新任驻英国大使郑泽光称中国对英国不构成威胁](/articles/reuters/1035802.md)
-
-7-13 [（修正）综述：FED政策转向对中国货币政策影响比较小 中国央行将坚持“以我为主”](/articles/reuters/1035803.md)
-
-7-13 [中国搜狗美股盘前上涨2.5% 此前中国无条件批准腾讯控股对其私有化](/articles/reuters/1035804.md)
-
-7-13 [比亚迪上周四遭主要股东喜马拉雅资本减持约714万股H股 涉资逾16亿港元](/articles/reuters/1035805.md)
-
-7-13 [曾堵死苏伊士运河的“长赐号”货轮已离开埃及水域--消息人士](/articles/reuters/1035806.md)
-
-7-13 [英国央行将严厉追查“神秘的”云计算服务](/articles/reuters/1035807.md)
-
-7-13 [中国发布网络产品安全漏洞管理规定 禁止利用漏洞危害网络安全行为](/articles/reuters/1035808.md)
-
-7-13 [上调未来12个月美元/人民币预测 料明年中升至6.65--瑞银财富管理](/articles/reuters/1035809.md)
-
-7-13 [需求激增背景下 OPEC+产油政策僵局有引发价格战之虞--IEA](/articles/reuters/1035810.md)
 
