--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+7-21 [72国际团体和学者联署呼吁港府撤销对邹幸彤所有控罪](/articles/rfi/1025853.md)
+
+7-21 [TikTok第四次在巴基斯坦被禁](/articles/rfi/1025854.md)
+
+7-21 [孟加拉大肆庆祝宰牲节  不顾疫情膜拜场所挤满人 – 法国国际广播电台 - RFI](/articles/rfi/1025855.md)
+
 7-21 [太阳挡不住安特托昆博 公鹿50年后再圆总冠军梦 – 法国国际广播电台 - RFI](/articles/rfi/1025856.md)
 
 7-21 [法国药品安全局暂停中国一款新冠抗原测试进口与投放](/articles/rfi/1025857.md)
@@ -594,10 +600,4 @@
 7-16 [伊拉克总理办公室宣布 与美方讨论撤军事宜 – 法国国际广播电台 - RFI](/articles/rfi/1026151.md)
 
 7-16 [戛纳电影节将映周冠威纪录片“时代革命”](/articles/rfi/1026152.md)
-
-7-16 [欧盟更新入境绿色国家，对中国开放的前提仍是中国须对等向欧盟开放](/articles/rfi/1026153.md)
-
-7-16 [孙大午案今开庭，被告们健康不佳，与检察方就证据与法律有巨大争论](/articles/rfi/1026154.md)
-
-7-16 [美国启动立法程序禁止进口新疆产品](/articles/rfi/1026155.md)
 
