--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+7-22 [曾颁奖给蔡英文 国际安全论坛2022台北登场](/articles/dw/1041273.md)
+
+7-22 [澳中贸易争端  美国贸易代表署表明挺澳](/articles/dw/1041274.md)
+
+7-22 [泰国新冠确诊激增  中国疫苗引发质疑](/articles/dw/1041275.md)
+
 7-21 [河南连日强降雨 郑州数十人丧生 新乡再降暴雨](/articles/dw/1041276.md)
 
 7-21 [布里斯班获2032年奥运会主办权](/articles/dw/1041277.md)
@@ -594,10 +600,4 @@
 7-5 [助出逃港人 加拿大香港社群提供就业住宿](/articles/dw/1041571.md)
 
 7-5 [里海发生大火 阿塞拜疆否认钻井平台爆炸](/articles/dw/1041572.md)
-
-7-5 [欧中投资协定卡关  欧洲驻华外交官齐发声](/articles/dw/1041573.md)
-
-7-5 [失踪三年音讯全无 消息证实维族学者遭关押](/articles/dw/1041574.md)
-
-7-5 [欧中投资协定卡关  欧盟驻华外交官齐发声](/articles/dw/1041575.md)
 
