--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+7-22 [德语媒体：河南洪灾“暴露中国审查制度的虚伪“](/articles/dw/1041257.md)
+
+7-22 [河南连日暴雨 灾情严重](/articles/dw/1041258.md)
+
 7-22 [德国专家：郑州洪水“没有任何排水系统能应对”](/articles/dw/1041259.md)
 
 7-22 [港警因 “煽动性 “儿童绘本逮捕多人](/articles/dw/1041260.md)
@@ -596,8 +600,4 @@
 7-6 [香港维他奶股价暴跌 哀悼「孤狼」有罪](/articles/dw/1041555.md)
 
 7-6 [滴滴被下架後  在美上市的中国科技公司也遭审查](/articles/dw/1041556.md)
-
-7-6 [港府若修数据保护法 脸书谷歌推特扬言撤港](/articles/dw/1041557.md)
-
-7-5 [欧中投资协定卡关  习近平与马克龙、默克尔视频](/articles/dw/1041558.md)
 
