--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+7-23 [郑州京广隧道救灾持续 救难人员：是天灾也是人祸](/articles/dw/1041248.md)
+
 7-23 [纳粹屠杀「地狱梗」翻车 奥运表演总监遭解雇](/articles/dw/1041249.md)
 
 7-23 [伦敦市长：拨款90万英镑 「张开双臂」欢迎香港人](/articles/dw/1041250.md)
@@ -598,6 +600,4 @@
 7-6 [世界医生联合会：群体免疫 “短期内无法实现“](/articles/dw/1041546.md)
 
 7-6 [塔利班在东北部攻势受阻](/articles/dw/1041547.md)
-
-7-6 [演奏音乐吧，不要战争！](/articles/dw/1041548.md)
 
