--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+7-24 [越南宣布首都河内封城](/articles/rfi/1025665.md)
+
 7-24 [东奥开幕式掌旗官 东加猛男成网友关注焦点 – 法国国际广播电台 - RFI](/articles/rfi/1025666.md)
 
 7-24 [加入废死行列 狮子山立法废除极刑 – 法国国际广播电台 - RFI](/articles/rfi/1025667.md)
@@ -598,6 +600,4 @@
 7-19 [美西超级野火持续延烧 居民再度被迫撤离 – 法国国际广播电台 - RFI](/articles/rfi/1025963.md)
 
 7-19 [俄罗斯再度试射「锆石」极音速巡弋飞弹 – 法国国际广播电台 - RFI](/articles/rfi/1025964.md)
-
-7-19 [香港准备修订个资法 在地美企忧中国实施网路限制 – 法国国际广播电台 - RFI](/articles/rfi/1025965.md)
 
