--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,28 @@
 法广
 ------
 
+7-25 [法日首脑承诺积极开展合作：支持自由开放的印太地区](/articles/rfi/1025637.md)
+
+7-25 [谢尔曼访华信息：不希望将美中激烈和持续的竞争演变成冲突](/articles/rfi/1025638.md)
+
+7-25 [学科类培训机构一律不得上市融资 中概教育股重挫](/articles/rfi/1025639.md)
+
+7-25 [印媒：中印将很快举行第12轮军长级会谈](/articles/rfi/1025640.md)
+
+7-25 [古巴官员：迄今约有60人因参与抗议活动被起诉](/articles/rfi/1025641.md)
+
+7-25 [美国会议员望国防部制供应链风险图 削减对中国依赖](/articles/rfi/1025642.md)
+
+7-25 [王毅：欧盟对华三重定位相互矛盾，相互抵销](/articles/rfi/1025643.md)
+
+7-25 [蔡英文：台日是紧密连结好邻居 力挺东京奥运](/articles/rfi/1025644.md)
+
+7-25 [港府129名公务员拒绝签署声明 约70人已离职](/articles/rfi/1025645.md)
+
+7-25 [防堵疫情延烧 中国提供缅甸克钦邦叛军一万剂疫苗 – 法国国际广播电台 - RFI](/articles/rfi/1025646.md)
+
+7-25 [反对防疫限制  澳洲和欧洲出现大规模示威抗议 – 法国国际广播电台 - RFI](/articles/rfi/1025647.md)
+
 7-25 [东京奥运会上荷兰选手染上新冠，美国选手拒绝打疫苗 - 要闻解说](/articles/rfi/1025648.md)
 
 7-25 [美国南加州自由雕塑公园中共病毒雕像遭歹徒纵火焚毁](/articles/rfi/1025649.md)
@@ -578,26 +600,4 @@
 7-20 [政冷商热：美商会指国安法未影响商业法律 惟促港府保信息自由免挫营商环境](/articles/rfi/1025935.md)
 
 7-20 [中港东奥参赛队历来规模最大 中国有望奖牌榜夺亚 香港得奖机会历来最大](/articles/rfi/1025936.md)
-
-7-20 [火箭来袭 落点就在阿富汗总统府附近 – 法国国际广播电台 - RFI](/articles/rfi/1025937.md)
-
-7-20 [遭控发动恶意网路攻击 中国：我们才是主要受害者 – 法国国际广播电台 - RFI](/articles/rfi/1025938.md)
-
-7-20 [太阳盼赢公鹿延长战线 得强化防守找回三分球准星 – 法国国际广播电台 - RFI](/articles/rfi/1025939.md)
-
-7-20 [布林肯指中国官方姑息骇客 纵容网攻 – 法国国际广播电台 - RFI](/articles/rfi/1025940.md)
-
-7-20 [6局8K无失分 大谷翔平好投无关胜败 – 法国国际广播电台 - RFI](/articles/rfi/1025941.md)
-
-7-20 [拉文有染疫疑虑 暂不随美国男篮到日本 – 法国国际广播电台 - RFI](/articles/rfi/1025942.md)
-
-7-20 [伊拉克市集自杀炸弹攻击近30死 IS宣称犯案 – 法国国际广播电台 - RFI](/articles/rfi/1025943.md)
-
-7-20 [拜登想把中国挤到角落里 德国左右为难](/articles/rfi/1025944.md)
-
-7-20 [罕见 西方国家一致认定北京幕后操纵网络攻击 - 要闻分析](/articles/rfi/1025945.md)
-
-7-20 [美机再落台湾  五天内两次 北京没话说了？](/articles/rfi/1025946.md)
-
-7-20 [应对“第四波”疫情，法国政府确认将扩大健康通行证的适用范围](/articles/rfi/1025947.md)
 
