--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+7-25 [奥地利基森霍佛爆冷 夺东奥女子自由车公路金牌 – 法国国际广播电台 - RFI](/articles/rfi/1025621.md)
+
+7-25 [阿尔及利亚宣布将生产中国科兴新冠疫苗](/articles/rfi/1025622.md)
+
 7-25 [马克龙访日未促成日本生母“绑架”法国子女案进展，悲愤法国男继续绝食抗议](/articles/rfi/1025623.md)
 
 7-25 [瓜地马拉反贪调查员遭革职逃亡海外 – 法国国际广播电台 - RFI](/articles/rfi/1025624.md)
@@ -596,8 +600,4 @@
 7-20 [应对疫情复燃 法国立法强制医护人员接种疫苗 - 法国风土人情](/articles/rfi/1025919.md)
 
 7-20 [川普曾查记者通联记录 美不再强制揭露消息来源 – 法国国际广播电台 - RFI](/articles/rfi/1025920.md)
-
-7-20 [CNN推串流订阅服务 预定2022年上线 – 法国国际广播电台 - RFI](/articles/rfi/1025921.md)
-
-7-20 [美国国家经济研究局：疫情引发经济衰退仅2个月 – 法国国际广播电台 - RFI](/articles/rfi/1025922.md)
 
